--- a/packages/@okta/i18n/src/properties/login_cs.properties
+++ b/packages/@okta/i18n/src/properties/login_cs.properties
@@ -137,9 +137,9 @@ errors.E0000082 = Ka\u017Ed\u00FD k\u00F3d lze pou\u017E\u00EDt pouze jednou. Po
 errors.E0000083 = P\u0159\u00EDstupov\u00FD k\u00F3d je platn\u00FD, ale do\u0161lo k p\u0159ekro\u010Den\u00ED \u010Dasov\u00E9ho okna.
 errors.E0000084 = Chyba vyhodnocen\u00ED aplikace.
 errors.E0000085 = V tuto chv\u00EDli nem\u00E1te opr\u00E1vn\u011Bn\u00ED p\u0159istupovat k va\u0161emu \u00FA\u010Dtu.
-errors.E0000086 = Tuto z\u00E1sadu nelze v tuto chv\u00EDli aktivovat.
-errors.E0000087 = Odpov\u011B\u010F na ot\u00E1zku pro obnoven\u00ED se neshoduje s na\u0161imi z\u00E1znamy.
-errors.E0000090 = Zadan\u00E1 role je ji\u017E u\u017Eivateli p\u0159i\u0159azena.
+errors.E0000086 = Tuto z\u00E1sadu nelze v t\u00E9to chv\u00EDli aktivovat.
+errors.E0000087 = Tato odpov\u011B\u010F na ot\u00E1zku pro obnoven\u00ED neodpov\u00EDd\u00E1 na\u0161im z\u00E1znam\u016Fm.
+errors.E0000090 = Zadan\u00E1 role je ji\u017E tomuto u\u017Eivateli p\u0159i\u0159azena.
 errors.E0000091 = Zadan\u00FD typ role nebyl stejn\u00FD jako po\u017Eadovan\u00FD typ role.
 errors.E0000092 = P\u0159\u00EDstup k t\u00E9to aplikaci vy\u017Eaduje op\u011Btovn\u00E9 ov\u011B\u0159en\u00ED: {0}
 errors.E0000093 = Byl p\u0159ekro\u010Den limit po\u010Dtu c\u00EDl\u016F
@@ -392,7 +392,7 @@ enroll.symantecVip.passcode1.tooltip = Bezpecnostn\u00ED k\u00F3d 1
 enroll.symantecVip.passcode2.placeholder = Bezpecnostn\u00ED k\u00F3d 2
 enroll.symantecVip.passcode2.tooltip = Bezpecnostn\u00ED k\u00F3d 2
 
-# Enroll Yubikey
+# Enroll YubiKey
 enroll.yubikey.title = Nastavit YubiKey
 enroll.yubikey.subtitle = Vlo\u017Ete v\u00E1\u0161 YubiKey do USB portu a klepn\u011Bte na n\u011Bj pro vytvo\u0159en\u00ED ov\u011B\u0159ovac\u00EDho k\u00F3du
 
@@ -533,10 +533,10 @@ primaryauth.submit = Prihl\u00E1sit
 primaryauth.newUser.tooltip=Toto je va\u0161e prvn\u00ED pripojen\u00ED k {0} z tohoto prohl\u00ED\u017Eece
 primaryauth.newUser.tooltip.close=Zavr\u00EDt
 oktaVerify.description = Pro p\u0159\u00EDstup k tomuto zdroji vy\u017Eaduje va\u0161e organizace p\u0159ihl\u00E1\u0161en\u00ED pomoc\u00ED va\u0161eho za\u0159\u00EDzen\u00ED.
-oktaVerify.button = P\u0159ihlaste se pomoc\u00ED Okta Verify na tomto za\u0159\u00EDzen\u00ED
+oktaVerify.button = P\u0159ihl\u00E1sit se pomoc\u00ED Okta FastPass
 
 # IDP Discovery
-idpDiscovery.email.placeholder = Email
+idpDiscovery.email.placeholder = E-mail
 
 # Forgot Password
 password.forgot.email.or.username.placeholder = E-mail nebo u\u017Eivatelsk\u00E9 jm\u00E9no
@@ -664,7 +664,7 @@ registration.default.callbackhook.error=Nemohli jsme nyn\u00ED zpracovat va\u016
 #Registration form error messages
 registration.error.userName.invalidEmail=Neplatn\u00E1 emailov\u00E1 adresa
 registration.error.password.passwordRequirementsNotMet=Po\u017Eadavky na heslo nebyly spln\u011Bny
-registration.error.userName.notUniqueWithinOrg=\u00DA\u010Det s takov\u00FDm emailem ji\u017E existuje
+registration.error.userName.notUniqueWithinOrg=\u00DA\u010Det s t\u00EDmto u\u017Eivatelsk\u00FDm jm\u00E9nem ({0}) u\u017E existuje.
 registration.error.notUniqueWithinOrg.Email = U\u017Eivatel s t\u00EDmto e-mailem ji\u017E existuje.
 registration.error.notUniqueWithinOrg.custom = U\u017Eivatel s t\u00EDmto {0} ji\u017E existuje.
 registration.error.invalidLoginEmail.Email = 'Email' mus\u00ED b\u00FDt ve form\u011B e-mailov\u00E9 adresy.
@@ -719,8 +719,11 @@ customUri.required.content.prompt = Nezobrazila se v\u00E1m v\u00FDzva?
 customUri.required.content.download.title = Nem\u00E1te aplikaci Okta Verify?
 customUri.required.content.download.linkText = St\u00E1hnout
 customUri.required.content.button = Spustit aplikaci Okta Verify
-universalLink.title = P\u0159ihlaste se pomoc\u00ED Okta Verify na tomto za\u0159\u00EDzen\u00ED
-universalLink.content = Chcete-li pokra\u010Dovat v p\u0159ihla\u0161ov\u00E1n\u00ED, otev\u0159ete Okta Verify. Pokud se Okta Verify neotev\u0159elo automaticky, klepnut\u00EDm na tla\u010D\u00EDtko n\u00ED\u017Ee Okta Verify znovu otev\u0159ete.
+universalLink.title = P\u0159ihl\u00E1sit se pomoc\u00ED Okta FastPass
+universalLink.content = Chcete-li pokra\u010Dovat v p\u0159ihla\u0161ov\u00E1n\u00ED, otev\u0159ete Okta Verify. Pokud se aplikace Okta Verify neotev\u0159ela automaticky, otev\u0159ete ji klepnut\u00EDm na tla\u010D\u00EDtko n\u00ED\u017Ee.
+appLink.title = P\u0159ihl\u00E1sit se pomoc\u00ED Okta FastPass
+appLink.content = Pokud se aplikace Okta Verify neotev\u0159ela automaticky, otev\u0159ete ji klepnut\u00EDm na tla\u010D\u00EDtko n\u00ED\u017Ee.
+oktaVerify.open.button = Otev\u0159\u00EDt Okta Verify
 oktaVerify.reopen.button = Znovu otev\u0159\u00EDt Okta Verify
 
 # Consent Required
@@ -768,7 +771,8 @@ oie.password.reset.verification = Pokud si chcete obnovit heslo, ov\u011B\u0159t
 idx.password.expiring.message = V p\u0159\u00EDpad\u011B vypr\u0161en\u00ED platnosti hesla bude v\u00E1\u0161 \u00FA\u010Det Okta zablokov\u00E1n.
 oie.password.incorrect.message = Nespr\u00E1vn\u00E9 heslo
 oie.selfservice.reset.password.not.allowed = Obnoven\u00ED hesla nen\u00ED v tuto chv\u00EDli povoleno. Pokud pot\u0159ebujete pomoc, kontaktujte pros\u00EDm podporu.
-password.common = Toto heslo bylo nalezeno v seznamu b\u011B\u017En\u011B pou\u017E\u00EDvan\u00FDch hesel. Zkuste pros\u00EDm zadat jin\u00E9 heslo.
+password.common = Toto heslo bylo nalezeno v seznamu b\u011B\u017En\u011B pou\u017E\u00EDvan\u00FDch hesel. Zkuste zadat jin\u00E9 heslo.
+idx.recovery.completed = Te\u010F se m\u016F\u017Eete p\u0159ihl\u00E1sit pomoc\u00ED sv\u00E9ho existuj\u00EDc\u00EDho u\u017Eivatelsk\u00E9ho jm\u00E9na a nov\u00E9ho hesla.
 
 ## Phone
 oie.phone.label = Telefon
@@ -799,7 +803,10 @@ oie.phone.invalid = Neplatn\u00E9 telefonn\u00ED \u010D\u00EDslo.
 oie.email.label = E-mail
 oie.email.authenticator.description = Ov\u011B\u0159it pomoc\u00ED odkazu nebo k\u00F3du odeslan\u00E9ho na e-mail
 oie.email.mfa.title = Ov\u011B\u0159it pomoc\u00ED e-mailu
-oie.email.verify.alternate.sentText = Zkontrolujte sv\u016Fj e-mail kv\u016Fli ov\u011B\u0159ovac\u00ED zpr\u00E1vy. Klikn\u011Bte na tla\u010D\u00EDtko ov\u011B\u0159en\u00ED ve sv\u00E9m e-mailu nebo zadejte k\u00F3d n\u00ED\u017Ee a pokra\u010Dujte.
+oie.email.verify.alternate.magicLinkToEmailAddress = Na adresu <$1>{0}</$1> byl e-mailem odesl\u00E1n jedine\u010Dn\u00FD odkaz (magic link). 
+oie.email.verify.alternate.magicLinkToYourEmail = Na <$1>v\u00E1\u0161 e-mail</$1> byl e-mailem odesl\u00E1n jedine\u010Dn\u00FD odkaz (magic link). 
+oie.email.verify.alternate.instructions = Pokra\u010Dujte kliknut\u00EDm na tento odkaz v e-mailu nebo zad\u00E1n\u00EDm n\u00ED\u017Ee uveden\u00E9ho k\u00F3du.
+oie.email.verify.alternate.showCodeTextField = M\u00EDsto toho zadejte k\u00F3d z e-mailu.
 oie.email.enroll.subtitle = Zkontrolujte sv\u016Fj e-mail a zadejte n\u00ED\u017Ee uveden\u00FD k\u00F3d.
 oie.email.return.link.expired.title = Ov\u011B\u0159it pomoc\u00ED e-mailu
 
@@ -815,9 +822,19 @@ oie.webauthn.error.not.supported = Bezpe\u010Dnostn\u00ED kl\u00ED\u010D nebo bi
 oie.verify.webauth.title = Ov\u011B\u0159it pomoc\u00ED bezpe\u010Dnostn\u00EDho kl\u00ED\u010De nebo biometrick\u00E9ho autentiz\u00E1toru
 oie.verify.webauthn.instructions = Budete vyzv\u00E1ni k pou\u017Eit\u00ED bezpe\u010Dnostn\u00EDho kl\u00ED\u010De nebo biometrick\u00E9ho ov\u011B\u0159en\u00ED (Windows Hello, Touch ID atd.). Ov\u011B\u0159en\u00ED dokon\u010Dete podle pokyn\u016F.
 oie.verify.webauthn.uv.required.instructions = Pro p\u0159ihl\u00E1\u0161en\u00ED pomoc\u00ED tohoto ov\u011B\u0159ova\u010De je vy\u017Eadov\u00E1no biometrick\u00E9 ov\u011B\u0159en\u00ED nebo k\u00F3d PIN.
+oie.verify.webauthn.cant.verify = Nelze se ov\u011B\u0159it?
+oie.verify.webauthn.cant.verify.biometric.authenticator.title = Pokou\u0161\u00EDte se pou\u017E\u00EDt biometrickou ov\u011B\u0159ovac\u00ED funkci?
+oie.verify.webauthn.cant.verify.biometric.authenticator.description1 = Biometrick\u00E9 ov\u011B\u0159ovac\u00ED funkce (otisk prstu, rozpozn\u00E1n\u00ED obli\u010Deje, PIN) budou fungovat jen na stejn\u00E9m za\u0159\u00EDzen\u00ED, na jak\u00E9m byly nastaveny.
+oie.verify.webauthn.cant.verify.biometric.authenticator.description2 = Pokud je na za\u0159\u00EDzen\u00ED, kter\u00E9 jste pou\u017Eili k nastaven\u00ED biometrick\u00E9 ov\u011B\u0159ovac\u00ED funkce, k dispozici jin\u00E1 metoda zabezpe\u010Den\u00ED, nastavte ji.
+oie.verify.webauthn.cant.verify.security.key.title = Pokou\u0161\u00EDte se pou\u017E\u00EDt bezpe\u010Dnostn\u00ED kl\u00ED\u010D?
+oie.verify.webauthn.cant.verify.security.key.description = Pokud jste si nastavili bezpe\u010Dnostn\u00ED kl\u00ED\u010D, zasu\u0148te ho po zobrazen\u00ED v\u00FDzvy v prohl\u00ED\u017Ee\u010Di do portu USB a klepn\u011Bte na tla\u010D\u00EDtko nebo zlat\u00FD disk. Bezpe\u010Dnostn\u00ED kl\u00ED\u010De m\u016F\u017Eou fungovat na v\u00EDce za\u0159\u00EDzen\u00EDch.
+oie.verify.webauthn.cant.verify.enrollment.step1 = Otev\u0159ete \u0159\u00EDdic\u00ED panel Okta (nap\u0159. vase_spolecnost.okta.com) na za\u0159\u00EDzen\u00ED, kter\u00E9 jste pou\u017Eili k nastaven\u00ED bezpe\u010Dnostn\u00EDho kl\u00ED\u010De nebo biometrick\u00E9 ov\u011B\u0159ovac\u00ED funkce.
+oie.verify.webauthn.cant.verify.enrollment.step2 = P\u0159ejd\u011Bte do Nastaven\u00ED > Metody zabezpe\u010Den\u00ED.
+oie.verify.webauthn.cant.verify.enrollment.step3 = V Okta Verify klikn\u011Bte na Nastavit.
+oie.verify.webauthn.cant.verify.enrollment.step4 = Naskenujte QR k\u00F3d pomoc\u00ED Okta Verify a podle pokyn\u016F dokon\u010Dete registraci va\u0161eho \u00FA\u010Dtu.
 
 ## Security Question
-oie.security.question.label = Bezpecnostn\u00ED ot\u00E1zka
+oie.security.question.label = Bezpe\u010Dnostn\u00ED ot\u00E1zka
 oie.security.question.enroll.title = Nastavit bezpe\u010Dnostn\u00ED ot\u00E1zku
 oie.security.question.challenge.title = Ov\u011B\u0159en\u00ED pomoc\u00ED bezpe\u010Dnostn\u00ED ot\u00E1zky
 oie.security.question.questionKey.label = Vyberte si bezpe\u010Dnostn\u00ED ot\u00E1zku
@@ -856,9 +873,9 @@ oie.okta_verify.totp.enterCodeText = Zadejte k\u00F3d z aplikace Okta Verify
 oie.okta_verify.push.title = Z\u00EDskejte nab\u00EDzen\u00E9 ozn\u00E1men\u00ED
 oie.okta_verify.push.sent = Nab\u00EDzen\u00E9 ozn\u00E1men\u00ED odesl\u00E1no
 oie.okta_verify.push.resend = Znovu odeslat push ozn\u00E1men\u00ED
-oie.okta_verify.signed_nonce.label = Pou\u017E\u00EDt Okta Verify na tomto za\u0159\u00EDzen\u00ED
-oie.okta_verify.enroll.force.upgrade.title = Aktualizovat Okta Verify
-oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Za\u0159\u00EDzen\u00ED pou\u017Eit\u00E9 k nastaven\u00ED aplikace Okta Verify nespl\u0148uje po\u017Eadavky va\u0161\u00ED organizace na zabezpe\u010Den\u00ED, proto\u017Ee nen\u00ED kompatibiln\u00ED se standardem FIPS. Po\u017E\u00E1dejte o pomoc sv\u00E9ho spr\u00E1vce.
+oie.okta_verify.signed_nonce.label = Pou\u017E\u00EDt Okta FastPass
+oie.okta_verify.enroll.force.upgrade.title = Aktualizovat aplikaci Okta Verify
+oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Za\u0159\u00EDzen\u00ED pou\u017Eit\u00E9 k nastaven\u00ED aplikace Okta Verify nespl\u0148uje po\u017Eadavky va\u0161\u00ED organizace na zabezpe\u010Den\u00ED, proto\u017Ee nen\u00ED kompatibiln\u00ED se standardem FIPS. O pomoc m\u016F\u017Eete po\u017E\u00E1dat sv\u00E9ho spr\u00E1vce.
 oie.authenticator.app.non_fips_compliant_enrollment_app_update_required = Verze aplikace Okta Verify na pou\u017Eit\u00E9m za\u0159\u00EDzen\u00ED nespl\u0148uje po\u017Eadavky va\u0161\u00ED organizace na zabezpe\u010Den\u00ED. Pokud chcete p\u0159idat sv\u016Fj \u00FA\u010Det, aktualizujte aplikaci Okta Verify na nejnov\u011Bj\u0161\u00ED verzi a pak to zkuste znovu.
 oie.authenticator.app.method.push.verify.enable.biometrics = Va\u0161e odpov\u011B\u010F byla p\u0159ijata, ale va\u0161e organizace vy\u017Eaduje biometriku. Ujist\u011Bte se, \u017Ee va\u0161e za\u0159\u00EDzen\u00ED podporuje biometriku a \u017Ee aplikace Okta Verify je aktu\u00E1ln\u00ED a m\u00E1te v n\u00ED pro sv\u016Fj \u00FA\u010Det povolenou biometriku, a pak to zkuste znovu.
 oie.authenticator.app.method.push.verify.enable.biometrics.title = Povolte biometriku v aplikaci Okta Verify
@@ -868,6 +885,12 @@ oie.authenticator.app.method.push.verify.enable.biometrics.point2 = Aplikace Okt
 oie.authenticator.app.method.push.verify.enable.biometrics.point3 = V aplikaci Okta Verify je pro v\u00E1\u0161 \u00FA\u010Det povolena biometrika.
 oie.authenticator.app.method.push.enroll.enable.biometrics = Va\u0161e organizace vy\u017Eaduje biometriku. Pokud chcete pokra\u010Dovat, ujist\u011Bte se, \u017Ee va\u0161e za\u0159\u00EDzen\u00ED podporuje biometriku, pak p\u0159idejte sv\u016Fj \u00FA\u010Det a po zobrazen\u00ED v\u00FDzvy povolte biometriku.
 oie.authenticator.app.method.push.enroll.enable.biometrics.title = Povolte biometriku, aby bylo mo\u017En\u00E9 p\u0159idat \u00FA\u010Det do aplikace Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics = Va\u0161e odpov\u011B\u010F byla p\u0159ijata, ale va\u0161e organizace vy\u017Eaduje biometriku. Ujist\u011Bte se, \u017Ee va\u0161e za\u0159\u00EDzen\u00ED podporuje biometriku a \u017Ee aplikace Okta Verify je aktu\u00E1ln\u00ED a m\u00E1te v n\u00ED pro sv\u016Fj \u00FA\u010Det povolenou biometriku. Pak to zkuste znovu.
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.title = Povolit biometriku v Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.description = Va\u0161e odpov\u011B\u010F byla p\u0159ijata, ale va\u0161e organizace vy\u017Eaduje biometriku. Ujist\u011Bte se, \u017Ee spl\u0148ujete n\u00E1sleduj\u00EDc\u00ED po\u017Eadavky, a pak to zkuste znovu:
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point1 = Va\u0161e za\u0159\u00EDzen\u00ED podporuje biometriku.
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point2 = Aplikace Okta Verify je aktu\u00E1ln\u00ED.
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point3 = V aplikaci Okta Verify je pro v\u00E1\u0161 \u00FA\u010Det povolena biometrika.
 
 ## Google authenticator
 oie.google_authenticator.label = Google Authenticator
@@ -901,7 +924,7 @@ oie.numberchallenge.warning = Je\u0161t\u011B jste neobdr\u017Eeli push ozn\u00E
 ## {0} refers to a number which is the correct answer for the number challenge
 oie.numberchallenge.instruction = Na mobiln\u00EDm za\u0159\u00EDzen\u00ED otev\u0159ete v\u00FDzvu Okta Verify a pot\u00E9 klepn\u011Bte na tla\u010D\u00EDtko <$1>{0}</$1> v Okta Verify a pokra\u010Dujte.
 oie.numberchallenge.force.upgrade.title = Aktualizovat aplikaci Okta Verify
-oie.authenticator.app.method.push.force.upgrade.number_challenge = Va\u0161e odpov\u011B\u010F byla p\u0159ijata, ale va\u0161e verze Okta Verify ji\u017E nen\u00ED podporov\u00E1na va\u0161\u00ED organizac\u00ED. Pokud chcete ov\u011B\u0159it svou identitu pomoc\u00ED nab\u00EDzen\u00FDch ozn\u00E1men\u00ED, aktualizujte si aplikaci Okta Verify na nejnov\u011Bj\u0161\u00ED verzi a pak to zkuste znovu.
+oie.authenticator.app.method.push.force.upgrade.number_challenge = Va\u0161e odpov\u011B\u010F byla p\u0159ijata, ale va\u0161e verze aplikace Okta Verify ji\u017E nen\u00ED ve va\u0161\u00ED organizaci podporov\u00E1na. Pokud chcete ov\u011B\u0159it svou identitu pomoc\u00ED nab\u00EDzen\u00FDch ozn\u00E1men\u00ED, aktualizujte si aplikaci Okta Verify na nejnov\u011Bj\u0161\u00ED verzi a pak to zkuste znovu.
 
 ## RSA Authenticator
 oie.rsa.authenticator.description = Ov\u011B\u0159te zad\u00E1n\u00EDm k\u00F3du vygenerovan\u00E9ho programem RSA SecurID
@@ -930,6 +953,14 @@ oie.symantecVip.challenge.title = Ov\u011B\u0159it pomoc\u00ED {0}
 oie.symantecVip.challenge.description = Zadejte vygenerovan\u00FD bezpe\u010Dnostn\u00ED k\u00F3d z aplikace {0}.
 oie.symantecVip.verify.passcode.label = Zadejte bezpe\u010Dnostn\u00ED k\u00F3d
 
+## YubiKey Authenticator
+oie.yubikey.label = YubiKey Authenticator
+oie.yubikey.authenticator.description = Ov\u011B\u0159te svou identitu pomoc\u00ED YubiKey.
+oie.yubikey.enroll.title = Nastavit YubiKey
+oie.yubikey.challenge.title = Ov\u011B\u0159it pomoc\u00ED YubiKey
+oie.yubikey.description = Zasu\u0148te YubiKey do portu USB a klepnut\u00EDm na n\u011Bj vygenerujte ov\u011B\u0159ovac\u00ED k\u00F3d.
+oie.yubikey.passcode.label = Vlo\u017Eit YubiKey a pak na n\u011Bj klepnout
+
 ## Select authenticator enrollment
 oie.select.authenticators.enroll.title = Nastaven\u00ED metod zabezpe\u010Den\u00ED
 oie.select.authenticators.enroll.subtitle = Metody zabezpe\u010Den\u00ED pom\u00E1haj\u00ED chr\u00E1nit v\u00E1\u0161 \u00FA\u010Det a zajistit, abyste k n\u011Bmu m\u011Bli p\u0159\u00EDstup pouze vy.
@@ -947,7 +978,8 @@ oie.select.authenticators.verify.subtitle = Vyberte z n\u00E1sleduj\u00EDc\u00ED
 
 ## Success Redirect
 oie.success.text.signingIn = P\u0159ihla\u0161ov\u00E1n\u00ED
-oie.success.text.signingIn.with.appName = Prihla\u0161ov\u00E1n\u00ED k {0}
+oie.success.text.signingIn.with.ellipsis = P\u0159ihla\u0161ov\u00E1n\u00ED...
+oie.success.text.signingIn.with.appName = P\u0159ihla\u0161ov\u00E1n\u00ED k {0}
 oie.success.text.signingIn.with.appName.and.identifier = P\u0159ihl\u00E1\u0161en\u00ED k {0} jako {1}
 
 ## Footer
@@ -1018,14 +1050,15 @@ errors.E0000150 = Dos\u00E1hli jste limitu \u017E\u00E1dost\u00ED o sms, zkuste 
 errors.E0000151 = Dos\u00E1hli jste limitu \u017E\u00E1dost\u00ED o vol\u00E1n\u00ED, zkuste to znovu pozd\u011Bji.
 
 # Consent
-oie.consent.admin.title = by cht\u011Bl/a z\u00EDskat p\u0159\u00EDstup k:
-oie.consent.enduser.title = by cht\u011Bl/a:
+oie.consent.scopes.admin.title = by cht\u011Bl/a z\u00EDskat p\u0159\u00EDstup k:
+oie.consent.scopes.enduser.title = by cht\u011Bl/a:
 oie.consent.enduser.accept.label = Ano, to jsem j\u00E1
 oie.consent.enduser.deny.label = Ne, to nejsem j\u00E1
 oie.consent.enduser.title = Zkusili jste se pr\u00E1v\u011B p\u0159ihl\u00E1sit?
-oie.consent.enduser.email.allow.description = Pokud chcete pokra\u010Dovat, vra\u0165te se k za\u0159\u00EDzen\u00ED nebo do okna, kde jste po\u017Eadovali e-mail s odkazem. Toto okno m\u016F\u017Eete kdykoli zav\u0159\u00EDt.
+oie.consent.enduser.email.allow.title = \u00DAsp\u011Bch Vra\u0165te se na p\u016Fvodn\u00ED kartu nebo do okna
+oie.consent.enduser.email.allow.description = Chcete-li pokra\u010Dovat, vra\u0165te se na p\u016Fvodn\u00ED kartu prohl\u00ED\u017Ee\u010De nebo do okna, kter\u00E9 jste pou\u017Eili k ov\u011B\u0159en\u00ED.
 oie.consent.enduser.deny.description = Toto okno m\u016F\u017Eete kdykoli zav\u0159\u00EDt.
-oie.return.to.original.tab = Vra\u0165te se pros\u00EDm na p\u016Fvodn\u00ED kartu.
+oie.return.to.original.tab = Toto okno m\u016F\u017Eete kdykoli zav\u0159\u00EDt.
 idx.operation.cancelled.by.user = Operace byla zru\u0161ena u\u017Eivatelem.
 idx.transferred.to.new.tab = Tok pokra\u010Doval na nov\u00E9 kart\u011B.
 idx.return.link.expired = Platnost tohoto e-mailov\u00E9ho odkazu vypr\u0161ela. Pokud jej chcete poslat znovu, vra\u0165te se na obrazovku, kde jste o n\u011Bj po\u017E\u00E1dali.
