--- a/packages/@okta/i18n/src/properties/login_da.properties
+++ b/packages/@okta/i18n/src/properties/login_da.properties
@@ -137,7 +137,7 @@ errors.E0000082 = Hver kode kan kun bruges \u00E9n gang. Vent p\u00E5 en ny kode
 errors.E0000083 = PassCode er gyldig men overskred tidsvinduet.
 errors.E0000084 = Evalueringsfejl i app.
 errors.E0000085 = Du har ikke tilladelse til at tilg\u00E5 din konto i \u00F8jeblikket.
-errors.E0000086 = Denne politik kan ikke aktiveres i \u00F8jeblikket.
+errors.E0000086 = Denne politik kan ikke aktiveres p\u00E5 nuv\u00E6rende tidspunkt.
 errors.E0000087 = Genoprettelseskoden matchede ikke med vores data.
 errors.E0000090 = Den specificerede rolle er allerede tildelt brugeren.
 errors.E0000091 = Den angivne rolletype var ikke den samme som den p\u00E5kr\u00E6vede rolletype.
@@ -392,7 +392,7 @@ enroll.symantecVip.passcode1.tooltip = Sikkerhedskode 1
 enroll.symantecVip.passcode2.placeholder = Sikkerhedskode 2
 enroll.symantecVip.passcode2.tooltip = Sikkerhedskode 2
 
-# Enroll Yubikey
+# Enroll YubiKey
 enroll.yubikey.title = Ops\u00E6t YubiKey
 enroll.yubikey.subtitle = S\u00E6t din YubiKey i en USB-port, og tryk p\u00E5 den for at generere en bekr\u00E6ftelseskode
 
@@ -533,7 +533,7 @@ primaryauth.submit = Log ind
 primaryauth.newUser.tooltip=Dette er f\u00F8rste gang, du opretter forbindelse til {0} fra denne browser
 primaryauth.newUser.tooltip.close=Luk
 oktaVerify.description = For at f\u00E5 adgang til denne ressource kr\u00E6ver din organisation, at du logger ind ved hj\u00E6lp af din enhed.
-oktaVerify.button = Log ind med Okta Verify p\u00E5 denne enhed
+oktaVerify.button = Log ind med Okta FastPass
 
 # IDP Discovery
 idpDiscovery.email.placeholder = E-mail
@@ -664,7 +664,7 @@ registration.default.callbackhook.error=Vi kunne ikke behandle din registrering 
 #Registration form error messages
 registration.error.userName.invalidEmail=Ugyldig e-mailadresse
 registration.error.password.passwordRequirementsNotMet=Kravene til kodeordet blev ikke opfyldt
-registration.error.userName.notUniqueWithinOrg=Der findes allerede en konto med samme e-mailadresse
+registration.error.userName.notUniqueWithinOrg=Der findes allerede en konto med {0}
 registration.error.notUniqueWithinOrg.Email = Der findes allerede en bruger med denne e-mail
 registration.error.notUniqueWithinOrg.custom = En bruger med dette {0} findes allerede
 registration.error.invalidLoginEmail.Email = 'Email' skal v\u00E6re i form af en e-mailadresse
@@ -719,8 +719,11 @@ customUri.required.content.prompt = Fik du ikke en prompt?
 customUri.required.content.download.title = Har du ikke Okta Verify?
 customUri.required.content.download.linkText = Hent her
 customUri.required.content.button = \u00C5bn Okta Verify
-universalLink.title = Log ind med Okta Verify p\u00E5 denne enhed
+universalLink.title = Log ind med Okta FastPass
 universalLink.content = \u00C5bn Okta Verify for at forts\u00E6tte med at logge ind. Hvis Okta Verify ikke \u00E5bnede automatisk, skal du trykke p\u00E5 knappen nedenfor for at gen\u00E5bne Okta Verify.
+appLink.title = Log ind med Okta FastPass
+appLink.content = Hvis Okta Verify ikke \u00E5bnede automatisk, skal du trykke p\u00E5 knappen herunder for at \u00E5bne Okta Verify igen.
+oktaVerify.open.button = \u00C5bn Okta Verify
 oktaVerify.reopen.button = Gen\u00E5bn Okta Verify
 
 # Consent Required
@@ -754,7 +757,7 @@ common.logo.alt = aria-logo
 
 ## Generic
 oie.authenticator.enroll.error.fail = Kunne ikke aktivere bekr\u00E6ftelsesenhed. Pr\u00F8v igen.
-oie.authenticator.verify.error.fail = Kunne ikke bekr\u00E6fte bekr\u00E6ftelsesenhed. Pr\u00F8v igen.
+oie.authenticator.verify.error.fail = Kunne ikke tilmelde authenticator. Pr\u00F8v igen.
 
 ## Password
 oie.password.label = Adgangskode
@@ -769,6 +772,7 @@ idx.password.expiring.message = N\u00E5r din adgangskode udl\u00F8ber, har du ik
 oie.password.incorrect.message = Adgangskoden er forkert
 oie.selfservice.reset.password.not.allowed = Nulstilling af adgangskode er ikke tilladt p\u00E5 nuv\u00E6rende tidspunkt. Kontakt support for at f\u00E5 hj\u00E6lp.
 password.common = Denne adgangskode blev fundet i en liste over almindeligt brugte adgangskoder. Pr\u00F8v med en anden adgangskode.
+idx.recovery.completed = Du kan nu logge ind med dit eksisterende brugernavn og din nye adgangskode.
 
 ## Phone
 oie.phone.label = Telefon
@@ -799,7 +803,10 @@ oie.phone.invalid = Ugyldigt telefonnummer.
 oie.email.label = E-mail
 oie.email.authenticator.description = Bekr\u00E6ft med et link eller en kode sendt til din e-mail
 oie.email.mfa.title = Bekr\u00E6ft med din e-mail
-oie.email.verify.alternate.sentText = Tjek din e-mail for en bekr\u00E6ftelsesmeddelelse. Klik p\u00E5 bekr\u00E6ftelsesknappen i din e-mail, eller indtast koden nedenfor for at forts\u00E6tte.
+oie.email.verify.alternate.magicLinkToEmailAddress = Et magisk e-maillink blev sendt til <$1>{0}</$1>. 
+oie.email.verify.alternate.magicLinkToYourEmail = Et magisk e-maillink blev sendt til <$1>din e-mail</$1>. 
+oie.email.verify.alternate.instructions = Klik p\u00E5 linket i e-mailen, eller indtast koden herunder for at forts\u00E6tte.
+oie.email.verify.alternate.showCodeTextField = Indtast i stedet en kode fra e-mailen
 oie.email.enroll.subtitle = Tjek din e-mail, og indtast nedenst\u00E5ende kode.
 oie.email.return.link.expired.title = Bekr\u00E6ft med din e-mail
 
@@ -815,6 +822,16 @@ oie.webauthn.error.not.supported = Sikkerhedsn\u00F8gle eller biometrisk authent
 oie.verify.webauth.title = Bekr\u00E6ft med sikkerhedsn\u00F8glen eller den biometriske godkender
 oie.verify.webauthn.instructions = Du vil blive anmodet om at bruge en sikkerhedsn\u00F8gle eller en biometrisk verifikation (Windows Hello, Touch ID osv.). F\u00F8lg instruktionerne for at fuldf\u00F8re verifikationen.
 oie.verify.webauthn.uv.required.instructions = Der kr\u00E6ves biometrisk verifikation eller PIN-kode for at logge p\u00E5 med denne godkender.
+oie.verify.webauthn.cant.verify = Problemer med at bekr\u00E6fte?
+oie.verify.webauthn.cant.verify.biometric.authenticator.title = Fors\u00F8ger du at bruge en biometrisk authenticator?
+oie.verify.webauthn.cant.verify.biometric.authenticator.description1 = Biometriske authenticator (fingeraftryk, ansigtsgenkendelse, PIN) virker kun p\u00E5 den samme enhed, som de er indstillet p\u00E5.
+oie.verify.webauthn.cant.verify.biometric.authenticator.description2 = Indstil om muligt en anden sikkerhedsmetode p\u00E5 den enhed, du brugte til at indstille den biometriske authenticator.
+oie.verify.webauthn.cant.verify.security.key.title = Fors\u00F8ger du at bruge en sikkerhedsn\u00F8gle?
+oie.verify.webauthn.cant.verify.security.key.description = Pr\u00F8v at s\u00E6tte sikkerhedsn\u00F8glen i en USB-port, n\u00E5r browseren beder om den, og tryk p\u00E5 knappen eller guldskiven. Sikkerhedsn\u00F8gler virker p\u00E5 flere enheder.
+oie.verify.webauthn.cant.verify.enrollment.step1 = \u00C5bn dit Okta-dashboard (f.eks. dinvirksomhed.okta.com) p\u00E5 den enhed, du brugte til at indstille din sikkerhedsn\u00F8gle eller biometriske authenticator.
+oie.verify.webauthn.cant.verify.enrollment.step2 = G\u00E5 til Indstillinger > Sikkerhedsmetoder
+oie.verify.webauthn.cant.verify.enrollment.step3 = Klik p\u00E5 "Indstil" p\u00E5 Okta Verify
+oie.verify.webauthn.cant.verify.enrollment.step4 = Scan QR-koden med Okta Verify, og f\u00F8lg anvisningerne for at fuldf\u00F8re tilmeldingen af din konto.
 
 ## Security Question
 oie.security.question.label = Sikkerhedssp\u00F8rgsm\u00E5l
@@ -856,7 +873,7 @@ oie.okta_verify.totp.enterCodeText = Indtast kode fra Okta Verify-appen
 oie.okta_verify.push.title = F\u00E5 en push-meddelelse
 oie.okta_verify.push.sent = Push-meddelelse sendt
 oie.okta_verify.push.resend = Send push-meddelelse igen
-oie.okta_verify.signed_nonce.label = Brug Okta Verify p\u00E5 denne enhed
+oie.okta_verify.signed_nonce.label = Brug Okta FastPass
 oie.okta_verify.enroll.force.upgrade.title = Opdater Okta Verify
 oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Enheden, der blev brugt til at konfigurere Okta Verify, opfylder ikke din organisations sikkerhedskrav, da den ikke er FIPS-kompatibel. Kontakt din administrator for hj\u00E6lp.
 oie.authenticator.app.non_fips_compliant_enrollment_app_update_required = Okta Verify-versionen p\u00E5 den anvendte enhed opfylder ikke din organisations sikkerhedskrav. Hvis du vil tilf\u00F8je din konto, skal du opdatere Okta Verify til den nyeste version og derefter pr\u00F8ve igen.
@@ -868,6 +885,12 @@ oie.authenticator.app.method.push.verify.enable.biometrics.point2 = Okta Verify 
 oie.authenticator.app.method.push.verify.enable.biometrics.point3 = Biometri er aktiveret for din konto i Okta Verify
 oie.authenticator.app.method.push.enroll.enable.biometrics = Din organisation kr\u00E6ver biometri. For at forts\u00E6tte skal du sikre, at din enhed underst\u00F8tter biometri, og derefter tilf\u00F8je din konto og aktivere biometri, n\u00E5r du bliver bedt om det.
 oie.authenticator.app.method.push.enroll.enable.biometrics.title = Aktiv\u00E9r biometri for at tilf\u00F8je en konto til Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics = Din tilbagemelding blev modtaget, men din organisation kr\u00E6ver biometrik. S\u00F8rg for, at din enhed underst\u00F8tter biometrik, at Okta Verify er opdateret, og at biometrik er aktiveret for din konto i Okta Verify, og pr\u00F8v derefter igen.
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.title = Aktiv\u00E9r biometri i Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.description = Din tilbagemelding blev modtaget, men din organisation kr\u00E6ver biometrik. S\u00F8rg for, at du opfylder f\u00F8lgende krav, og pr\u00F8v derefter igen:
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point1 = Din enhed underst\u00F8tter biometri
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point2 = Okta Verify er opdateret
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point3 = Biometri er aktiveret for din konto i Okta Verify
 
 ## Google authenticator
 oie.google_authenticator.label = Google Authenticator
@@ -930,6 +953,14 @@ oie.symantecVip.challenge.title = Bekr\u00E6ft med {0}
 oie.symantecVip.challenge.description = Indtast den genererede sikkerhedskode fra {0}-appen
 oie.symantecVip.verify.passcode.label = Angiv sikkerhedskode
 
+## YubiKey Authenticator
+oie.yubikey.label = YubiKey Authenticator
+oie.yubikey.authenticator.description = Bekr\u00E6ft din identitet med YubiKey
+oie.yubikey.enroll.title = Indstil YubiKey
+oie.yubikey.challenge.title = Bekr\u00E6ft med YubiKey
+oie.yubikey.description = Inds\u00E6t YubiKey i en USB-port, og s\u00E6t fingeren p\u00E5 den for at generere en bekr\u00E6ftelseskode.
+oie.yubikey.passcode.label = Inds\u00E6t og s\u00E6t fingeren p\u00E5 din YubiKey
+
 ## Select authenticator enrollment
 oie.select.authenticators.enroll.title = Indstil sikkerhedsmetoder
 oie.select.authenticators.enroll.subtitle = Sikkerhedsmetoder hj\u00E6lper med at beskytte din konto ved at sikre, at det kun er dig, der har adgang.
@@ -947,6 +978,7 @@ oie.select.authenticators.verify.subtitle = V\u00E6lg mellem f\u00F8lgende indst
 
 ## Success Redirect
 oie.success.text.signingIn = Logger ind
+oie.success.text.signingIn.with.ellipsis = Logger ind...
 oie.success.text.signingIn.with.appName = Logger ind p\u00E5 {0}
 oie.success.text.signingIn.with.appName.and.identifier = Logger ind p\u00E5 {0} som {1}
 
@@ -1018,14 +1050,15 @@ errors.E0000150 = Du har n\u00E5et gr\u00E6nsen for SMS-anmodninger. Pr\u00F8v i
 errors.E0000151 = Du har n\u00E5et gr\u00E6nsen for opkaldsanmodninger. Pr\u00F8v igen senere.
 
 # Consent
-oie.consent.admin.title = vil gerne have adgang til:
-oie.consent.enduser.title = vil gerne:
+oie.consent.scopes.admin.title = vil gerne have adgang til:
+oie.consent.scopes.enduser.title = vil gerne:
 oie.consent.enduser.accept.label = Ja det er mig
 oie.consent.enduser.deny.label = Nej, det er ikke mig
 oie.consent.enduser.title = Har du lige fors\u00F8gt at logge ind?
-oie.consent.enduser.email.allow.description = For at forts\u00E6tte skal du g\u00E5 tilbage til den enhed eller det vindue, hvor du anmodede om e-maillinket. Du kan lukke dette vindue n\u00E5r som helst.
-oie.consent.enduser.deny.description = Du kan lukke dette vindue n\u00E5r som helst.
-oie.return.to.original.tab = G\u00E5 tilbage til den oprindelige fane.
+oie.consent.enduser.email.allow.title = Fuldf\u00F8rt! G\u00E5 tilbage til den oprindelige fane eller det oprindelige vindue
+oie.consent.enduser.email.allow.description = For at forts\u00E6tte skal du vende tilbage til den oprindelige browserfane eller det oprindelige vindue, du brugte til at bekr\u00E6fte.
+oie.consent.enduser.deny.description = Luk dette vindue n\u00E5r som helst.
+oie.return.to.original.tab = Luk dette vindue n\u00E5r som helst.
 idx.operation.cancelled.by.user = Handlingen blev annulleret af brugeren.
 idx.transferred.to.new.tab = Flowet fortsatte under en ny fane.
 idx.return.link.expired = Dette e-maillink er udl\u00F8bet. For at f\u00E5 det sendt igen, skal du g\u00E5 tilbage til det sk\u00E6rmbillede, hvor du har anmodet om det.
@@ -1108,13 +1141,13 @@ idx.device.activated = F\u00F8lg instruktionerne p\u00E5 din enhed for at se de 
 idx.device.not.activated.consent.denied = Enheden kan ikke aktiveres, fordi du ikke har tilladt adgang
 idx.device.not.activated.internal.error = Enheden kan ikke aktiveres p\u00E5 grund af en intern fejl
 idx.invalid.device.code = Ugyldig kode. Pr\u00F8v igen.
-idx.operation.cancelled.on.other.device = Adgang n\u00E6gtet p\u00E5 anden enhed.
+idx.operation.cancelled.on.other.device = Adgang blev n\u00E6gtet p\u00E5 anden enhed.
 
 # Email activation
-idx.expired.activation.token = Din kontos aktiveringslink er ikke l\u00E6ngere gyldigt. Anmod om en ny aktiverings-e-mail nedenfor.
-idx.missing.activation.token = Dette kan ske, hvis du allerede har aktiveret din konto, eller hvis den URL, du pr\u00F8ver at bruge, er ugyldig. Kontakt din administrator for yderligere hj\u00E6lp.
+idx.expired.activation.token = Din kontos aktiveringslink er ikke l\u00E6ngere gyldigt. Anmod om en ny aktiveringse-mail herunder.
+idx.missing.activation.token = Dette kan ske, hvis du allerede har aktiveret din konto, eller hvis den internetadresse, du pr\u00F8ver at bruge, er ugyldig. Kontakt din administrator for yderligere hj\u00E6lp.
 idx.activating.inactive.user = Din konto er blevet midlertidigt suspenderet. Kontakt din administrator for yderligere hj\u00E6lp.
-idx.request.activation.email = Der er anmodet om et nyt aktiveringslink. Hvis dine oplysninger stemmer overens med vores optegnelser, modtager du snart et nyt aktiveringslink i din indbakke.
+idx.request.activation.email = Der blev anmodet om et nyt aktiveringslink. Hvis dine oplysninger stemmer overens med vores register, vil du snart modtage et nyt aktiveringslink i din indbakke.
 
 oie.activation.request.email.title.expire = Aktiveringslinket er udl\u00F8bet
 oie.activation.request.email.title.invalid = Aktiveringslinket er ikke l\u00E6ngere gyldigt
