--- a/packages/@okta/i18n/src/properties/login_id.properties
+++ b/packages/@okta/i18n/src/properties/login_id.properties
@@ -138,8 +138,8 @@ errors.E0000083 = Kode Sandi valid, tetapi melebihi jangka waktu.
 errors.E0000084 = Kesalahan evaluasi aplikasi.
 errors.E0000085 = Anda tidak memiliki izin untuk mengakses akun Anda saat ini.
 errors.E0000086 = Kebijakan ini tidak dapat diaktifkan saat ini.
-errors.E0000087 = Jawaban pertanyaan pemulihan tidak cocok dengan data kami.
-errors.E0000090 = Peran yang ditentukan sudah ditetapkan ke pengguna.
+errors.E0000087 = Jawaban pertanyaan pemulihan tidak cocok dengan catatan kami.
+errors.E0000090 = Peran yang ditentukan sudah ditetapkan pada pengguna.
 errors.E0000091 = Jenis peran yang diberikan tidak sama dengan jenis peran yang diperlukan.
 errors.E0000092 = Akses ke aplikasi ini memerlukan autentikasi ulang: {0}
 errors.E0000093 = Batas jumlah target terlampaui
@@ -392,7 +392,7 @@ enroll.symantecVip.passcode1.tooltip = Kode keamanan 1
 enroll.symantecVip.passcode2.placeholder = Kode keamanan 2
 enroll.symantecVip.passcode2.tooltip = Kode keamanan 2
 
-# Enroll Yubikey
+# Enroll YubiKey
 enroll.yubikey.title = Setup YubiKey
 enroll.yubikey.subtitle = Masukkan YubiKey ke port USB dan ketuk untuk membuat kode verifikasi
 
@@ -533,7 +533,7 @@ primaryauth.submit = Masuk
 primaryauth.newUser.tooltip=Ini pertama kalinya Anda terhubung ke {0} dari browser ini
 primaryauth.newUser.tooltip.close=Tutup
 oktaVerify.description = Untuk mengakses sumber daya ini, organisasi Anda mengharuskan Anda untuk masuk menggunakan perangkat Anda.
-oktaVerify.button = Masuk menggunakan Okta Verify di perangkat ini
+oktaVerify.button = Masuk dengan Okta FastPass
 
 # IDP Discovery
 idpDiscovery.email.placeholder = Email
@@ -664,7 +664,7 @@ registration.default.callbackhook.error=Kami tidak bisa memproses pendaftaran An
 #Registration form error messages
 registration.error.userName.invalidEmail=Alamat email tidak sah
 registration.error.password.passwordRequirementsNotMet=Persyaratan kata sandi tidak tercapai
-registration.error.userName.notUniqueWithinOrg=Akun dengan email itu sudah ada
+registration.error.userName.notUniqueWithinOrg=Akun dengan {0} sudah ada
 registration.error.notUniqueWithinOrg.Email = Pengguna dengan alamat Email ini sudah ada
 registration.error.notUniqueWithinOrg.custom = Pengguna dengan {0} ini sudah ada
 registration.error.invalidLoginEmail.Email = 'Email' harus dalam bentuk alamat email
@@ -719,8 +719,11 @@ customUri.required.content.prompt = Tidak mendapat perintah?
 customUri.required.content.download.title = Tidak punya Okta Verify?
 customUri.required.content.download.linkText = Unduh di sini
 customUri.required.content.button = Luncurkan Okta Verify
-universalLink.title = Masuk menggunakan Okta Verify di perangkat ini
+universalLink.title = Masuk dengan Okta FastPass
 universalLink.content = Buka Okta Verify untuk melanjutkan masuk. Jika Okta Verify tidak terbuka secara otomatis, ketuk tombol di bawah untuk membuka kembali Okta Verify.
+appLink.title = Masuk dengan Okta FastPass
+appLink.content = Jika Okta Verify tidak terbuka secara otomatis, ketuk tombol di bawah untuk membuka kembali Okta Verify.
+oktaVerify.open.button = Buka Okta Verify
 oktaVerify.reopen.button = Buka kembali Okta Verify
 
 # Consent Required
@@ -767,8 +770,9 @@ oie.password.confirmPasswordLabel = Masukkan ulang kata sandi
 oie.password.reset.verification = Verifikasi dengan salah satu metode keamanan berikut untuk mengatur ulang kata sandi Anda.
 idx.password.expiring.message = Ketika kata sandi kedaluwarsa, Anda akan dikunci sehingga tidak dapat masuk ke akun Okta Anda.
 oie.password.incorrect.message = Kata sandi salah
-oie.selfservice.reset.password.not.allowed = Pengaturan ulang kata sandi tidak diperbolehkan saat ini. Silakan hubungi bagian dukungan untuk mendapatkan bantuan.
+oie.selfservice.reset.password.not.allowed = Atur ulang kata sandi tidak diperbolehkan saat ini. Silakan hubungi dukungan untuk bantuan.
 password.common = Kata sandi ini tidak ditemukan dalam daftar kata sandi yang biasanya digunakan. Silakan coba kata sandi lain.
+idx.recovery.completed = Anda sekarang dapat masuk dengan nama pengguna yang ada dan kata sandi baru.
 
 ## Phone
 oie.phone.label = Ponsel
@@ -799,7 +803,10 @@ oie.phone.invalid = Nomor Telepon Tidak Valid.
 oie.email.label = Email
 oie.email.authenticator.description = Verifikasi dengan tautan atau kode yang dikirim ke email Anda
 oie.email.mfa.title = Verifikasi dengan email Anda
-oie.email.verify.alternate.sentText = Periksa email Anda untuk pesan verifikasi. Klik tombol verifikasi di email Anda atau masukkan kode di bawah ini untuk melanjutkan.
+oie.email.verify.alternate.magicLinkToEmailAddress = Tautan ajaib email telah dikirim ke <$1>{0}</$1>. 
+oie.email.verify.alternate.magicLinkToYourEmail = Tautan ajaib email telah dikirim ke <$1>email Anda</$1>. 
+oie.email.verify.alternate.instructions = Klik tautan di email atau masukkan kode di bawah ini untuk melanjutkan.
+oie.email.verify.alternate.showCodeTextField = Masukkan kode dari email sebagai gantinya
 oie.email.enroll.subtitle = Silakan periksa email Anda dan masukkan kode di bawah ini.
 oie.email.return.link.expired.title = Verifikasi dengan email Anda
 
@@ -815,6 +822,16 @@ oie.webauthn.error.not.supported = Kunci keamanan atau autentikator biometrik ti
 oie.verify.webauth.title = Verifikasi dengan Kunci Keamanan atau Autentikator Biometrik
 oie.verify.webauthn.instructions = Anda akan diminta untuk menggunakan kunci keamanan atau verifikasi biometrik (Windows Hello, Touch ID, dll.). Ikuti instruksi untuk menyelesaikan verifikasi.
 oie.verify.webauthn.uv.required.instructions = Verifikasi biometrik atau PIN diperlukan untuk masuk dengan autentikator ini.
+oie.verify.webauthn.cant.verify = Tidak dapat memverifikasi?
+oie.verify.webauthn.cant.verify.biometric.authenticator.title = Apakah Anda mencoba menggunakan pengautentikasi biometrik?
+oie.verify.webauthn.cant.verify.biometric.authenticator.description1 = Pengautentikasi biometrik (sidik jari, pengenalan wajah, PIN) hanya akan berfungsi pada perangkat yang sama tempat pengautentikasi tersebut disiapkan.
+oie.verify.webauthn.cant.verify.biometric.authenticator.description2 = Jika tersedia, siapkan metode keamanan lain pada perangkat yang Anda gunakan untuk menyiapkan pengautentikasi biometrik Anda.
+oie.verify.webauthn.cant.verify.security.key.title = Apakah Anda mencoba menggunakan kunci keamanan?
+oie.verify.webauthn.cant.verify.security.key.description = Jika Anda telah menyiapkan kunci keamanan, masukkan ke port USB saat diminta oleh browser dan ketuk tombol atau disk emas. Kunci keamanan dapat berfungsi di beberapa perangkat.
+oie.verify.webauthn.cant.verify.enrollment.step1 = Buka Dasbor Okta Anda (mis. perusahaananda.okta.com) di perangkat yang Anda gunakan untuk menyiapkan kunci keamanan atau pengautentikasi biometrik Anda
+oie.verify.webauthn.cant.verify.enrollment.step2 = Buka Pengaturan > Metode Keamanan
+oie.verify.webauthn.cant.verify.enrollment.step3 = Di Okta Verify, klik "Pengaturan"
+oie.verify.webauthn.cant.verify.enrollment.step4 = Pindai kode QR menggunakan Okta Verify dan ikuti instruksi untuk menyelesaikan pendaftaran akun Anda
 
 ## Security Question
 oie.security.question.label = Pertanyaan Keamanan
@@ -856,11 +873,11 @@ oie.okta_verify.totp.enterCodeText = Masukkan kode dari aplikasi Okta Verify
 oie.okta_verify.push.title = Dapatkan notifikasi push
 oie.okta_verify.push.sent = Notifikasi push dikirim
 oie.okta_verify.push.resend = Kirim ulang pemberitahuan push
-oie.okta_verify.signed_nonce.label = Gunakan Okta Verify di perangkat ini
+oie.okta_verify.signed_nonce.label = Gunakan Okta FastPass
 oie.okta_verify.enroll.force.upgrade.title = Perbarui Okta Verify
-oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Perangkat yang digunakan untuk menyiapkan Okta Verify tidak memenuhi persyaratan keamanan organisasi Anda karena perangkat tersebut tidak sesuai dengan FIPS. Hubungi administrator Anda untuk mendapatkan bantuan.
-oie.authenticator.app.non_fips_compliant_enrollment_app_update_required = Versi Okta Verify di perangkat yang digunakan tidak memenuhi persyaratan keamanan organisasi Anda. Untuk menambahkan akun Anda, perbarui Okta Verify ke versi terbaru, lalu coba lagi.
-oie.authenticator.app.method.push.verify.enable.biometrics = Respons Anda telah diterima, tetapi organisasi Anda memerlukan biometrik. Pastikan perangkat Anda mendukung biometrik, Okta Verify sudah dalam versi terbaru dan biometrik sudah diaktifkan untuk akun Anda di Okta Verify, lalu coba lagi.
+oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Perangkat yang digunakan untuk menyiapkan Okta Verify tidak memenuhi persyaratan keamanan organisasi Anda karena tidak sesuai dengan FIPS. Hubungi administrator Anda untuk mendapatkan bantuan.
+oie.authenticator.app.non_fips_compliant_enrollment_app_update_required = Versi Okta Verify pada perangkat yang digunakan tidak memenuhi persyaratan keamanan organisasi Anda. Untuk menambahkan akun Anda, perbarui Okta Verify ke versi terbaru, lalu coba lagi.
+oie.authenticator.app.method.push.verify.enable.biometrics = Tanggapan Anda telah diterima, tetapi organisasi Anda memerlukan biometrik. Pastikan perangkat Anda mendukung biometrik, Okta Verify terbaru dan biometrik diaktifkan untuk akun Anda di Okta Verify, lalu coba lagi.
 oie.authenticator.app.method.push.verify.enable.biometrics.title = Aktifkan biometrik di Okta Verify
 oie.authenticator.app.method.push.verify.enable.biometrics.description = Respons Anda telah diterima, tetapi organisasi Anda memerlukan biometrik. Pastikan Anda memenuhi persyaratan berikut, lalu coba lagi:
 oie.authenticator.app.method.push.verify.enable.biometrics.point1 = Perangkat Anda mendukung biometrik
@@ -868,6 +885,12 @@ oie.authenticator.app.method.push.verify.enable.biometrics.point2 = Okta Verify 
 oie.authenticator.app.method.push.verify.enable.biometrics.point3 = Di Okta Verify, biometrik sudah diaktifkan untuk akun Anda
 oie.authenticator.app.method.push.enroll.enable.biometrics = Organisasi Anda memerlukan biometrik. Untuk melanjutkan, pastikan perangkat Anda mendukung biometrik, lalu tambahkan akun Anda dan aktifkan biometrik saat diminta.
 oie.authenticator.app.method.push.enroll.enable.biometrics.title = Aktifkan biometrik untuk menambahkan akun di Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics = Respons Anda telah diterima, tetapi organisasi Anda memerlukan biometrik. Pastikan perangkat Anda mendukung biometrik, Okta Verify terbaru, dan biometrik diaktifkan untuk akun Anda di Okta Verify, lalu coba lagi.
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.title = Aktifkan biometrik di Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.description = Respons Anda telah diterima, tetapi organisasi Anda memerlukan biometrik. Pastikan Anda memenuhi persyaratan berikut, lalu coba lagi:
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point1 = Perangkat Anda mendukung biometrik
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point2 = Okta Verify sudah menggunakan versi terbaru
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point3 = Di Okta Verify, biometrik diaktifkan untuk akun Anda
 
 ## Google authenticator
 oie.google_authenticator.label = Google Authenticator
@@ -901,7 +924,7 @@ oie.numberchallenge.warning = Belum menerima pemberitahuan push? Coba buka aplik
 ## {0} refers to a number which is the correct answer for the number challenge
 oie.numberchallenge.instruction = Di perangkat seluler Anda, buka perintah Okta Verify, lalu ketuk <$1>{0}</$1> di Okta Verify untuk melanjutkan.
 oie.numberchallenge.force.upgrade.title = Perbarui Okta Verify
-oie.authenticator.app.method.push.force.upgrade.number_challenge = Tanggapan Anda telah diterima, tetapi versi Okta Verify Anda tidak lagi didukung oleh organisasi Anda. Untuk memverifikasi identitas Anda dengan notifikasi push, perbarui Okta Verify ke versi terbaru, lalu coba lagi.
+oie.authenticator.app.method.push.force.upgrade.number_challenge = Tanggapan Anda telah diterima, tetapi versi Okta Verify Anda tidak lagi didukung oleh organisasi Anda. Untuk memverifikasi identitas Anda dengan pemberitahuan push, perbarui Okta Verify ke versi terbaru, lalu coba lagi.
 
 ## RSA Authenticator
 oie.rsa.authenticator.description = Verifikasi dengan memasukkan kode yang dibuat oleh RSA SecurID
@@ -930,6 +953,14 @@ oie.symantecVip.challenge.title = Verifikasi dengan {0}
 oie.symantecVip.challenge.description = Masukkan kode keamanan yang dibuat dari aplikasi {0}.
 oie.symantecVip.verify.passcode.label = Masukkan kode keamanan
 
+## YubiKey Authenticator
+oie.yubikey.label = YubiKey Authenticator
+oie.yubikey.authenticator.description = Verifikasi identitas Anda menggunakan YubiKey
+oie.yubikey.enroll.title = Siapkan YubiKey
+oie.yubikey.challenge.title = Verifikasi dengan YubiKey
+oie.yubikey.description = Masukkan YubiKey ke port USB dan ketuk untuk menghasilkan kode verifikasi.
+oie.yubikey.passcode.label = Masukkan lalu ketuk YubiKey Anda
+
 ## Select authenticator enrollment
 oie.select.authenticators.enroll.title = Siapkan metode keamanan
 oie.select.authenticators.enroll.subtitle = Metode keamanan membantu melindungi akun Anda dengan memastikan hanya Anda yang memiliki akses.
@@ -946,7 +977,8 @@ oie.select.authenticators.verify.title = Verifikasi ini memang Anda dengan metod
 oie.select.authenticators.verify.subtitle = Pilih dari opsi berikut
 
 ## Success Redirect
-oie.success.text.signingIn = Sedang Masuk
+oie.success.text.signingIn = Masuk
+oie.success.text.signingIn.with.ellipsis = Masuk...
 oie.success.text.signingIn.with.appName = Sedang masuk ke {0}
 oie.success.text.signingIn.with.appName.and.identifier = Masuk ke {0} sebagai {1}
 
@@ -994,7 +1026,7 @@ oie.user.profile.firstname= Nama depan
 oie.user.profile.primary.email= Email
 oie.selfservice.unlock_user.success.message = Anda dapat masuk menggunakan nama pengguna dan kata sandi saat ini.
 oie.selfservice.unlock_user.failed.message = Kami tidak dapat membuka akun Anda saat ini, silakan hubungi administrator Anda
-oie.selfservice.user.unlock.not.allowed = Pembukaan Kunci Layanan Mandiri tidak diperbolehkan saat ini. Silakan hubungi bagian dukungan untuk mendapatkan bantuan.
+oie.selfservice.user.unlock.not.allowed = Buka Kunci Mandiri tidak diperbolehkan saat ini. Silakan hubungi dukungan untuk bantuan.
 
 ## Terminal errors
 idx.session.expired = Sesi telah kedaluwarsa.
@@ -1004,7 +1036,7 @@ idx.return.error = Tidak dapat memproses tautan email ini. Kembali ke layar temp
 idx.return.stale = Tautan email ini kedaluwarsa. Kembali ke layar tempat Anda mengirim permintaan.
 idx.invalid.forgot.password.token = Token atur ulang kata sandi Anda tidak lagi valid.
 idx.invalid.reset.password.token = Token atur ulang kata sandi Anda tidak lagi valid. Hubungi administrator Anda untuk mendapatkan token baru.
-idx.reset.password.activating.user = Pengaturan ulang kata sandi tidak dapat dilakukan saat pengguna sedang mengaktifkan. Hubungi administrator Anda untuk mendapatkan token baru.
+idx.reset.password.activating.user = Atur ulang kata sandi tidak dapat dilakukan saat pengguna sedang diaktifkan. Hubungi administrator Anda untuk mendapatkan token baru.
 
 ## OIE Server-side errors
 tagsNotAllowed = Bidang tidak boleh berisi tag HTML
@@ -1018,14 +1050,15 @@ errors.E0000150 = Anda telah mencapai batas permintaan sms, silakan coba lagi na
 errors.E0000151 = Anda telah mencapai batas permintaan panggilan, silakan coba lagi nanti.
 
 # Consent
-oie.consent.admin.title = ingin mengakses:
-oie.consent.enduser.title = ingin:
+oie.consent.scopes.admin.title = ingin mengakses:
+oie.consent.scopes.enduser.title = ingin:
 oie.consent.enduser.accept.label = Ya, itu saya
 oie.consent.enduser.deny.label = Bukan, itu bukan saya
 oie.consent.enduser.title = Apakah Anda baru saja mencoba masuk?
-oie.consent.enduser.email.allow.description = Untuk melanjutkan, kembali ke perangkat atau jendela tempat Anda meminta tautan email. Anda dapat menutup jendela ini kapan saja.
-oie.consent.enduser.deny.description = Anda dapat menutup jendela ini kapan saja.
-oie.return.to.original.tab = Harap kembali ke tab awal.
+oie.consent.enduser.email.allow.title = Sukses! Kembali ke tab atau jendela asli
+oie.consent.enduser.email.allow.description = Untuk melanjutkan, silakan kembali ke tab atau jendela browser asli yang Anda gunakan untuk memverifikasi.
+oie.consent.enduser.deny.description = Tutup jendela ini kapan saja.
+oie.return.to.original.tab = Tutup jendela ini kapan saja.
 idx.operation.cancelled.by.user = Operasi dibatalkan oleh pengguna.
 idx.transferred.to.new.tab = Alur dilanjutkan di tab baru.
 idx.return.link.expired = Tautan email ini telah kedaluwarsa. Untuk mengirim ulang, kembali ke layar tempat Anda mengirim permintaan.
@@ -1111,10 +1144,10 @@ idx.invalid.device.code = Kode tidak valid. Coba lagi.
 idx.operation.cancelled.on.other.device = Akses ditolak di perangkat lain.
 
 # Email activation
-idx.expired.activation.token = Tautan aktivasi akun Anda tidak lagi valid. Silakan minta email aktivasi baru di bawah ini.
-idx.missing.activation.token = Hal ini dapat terjadi jika Anda telah mengaktifkan akun Anda, atau jika URL yang Anda gunakan tidak valid. Hubungi administrator Anda untuk mendapatkan bantuan lebih lanjut.
-idx.activating.inactive.user = Akun Anda ditangguhkan sementara waktu. Hubungi administrator Anda untuk mendapatkan bantuan lebih lanjut.
-idx.request.activation.email = Tautan aktivasi baru diminta. Jika informasi Anda cocok dengan data kami, Anda akan segera menerima tautan aktivasi baru di kotak masuk Anda.
+idx.expired.activation.token = Tautan aktivasi akun Anda tidak lagi valid. Minta email aktivasi baru di bawah ini.
+idx.missing.activation.token = Hal ini dapat terjadi jika Anda telah mengaktifkan akun Anda, atau jika URL yang Anda coba gunakan tidak valid. Hubungi administrator Anda untuk mendapatkan dukungan lebih lanjut.
+idx.activating.inactive.user = Akun Anda ditangguhkan sementara waktu. Hubungi administrator Anda untuk mendapatkan dukungan lebih lanjut.
+idx.request.activation.email = Tautan aktivasi baru diminta. Jika informasi Anda sesuai dengan catatan kami, Anda akan segera menerima tautan aktivasi baru di kotak masuk Anda.
 
 oie.activation.request.email.title.expire = Tautan aktivasi telah kedaluwarsa
 oie.activation.request.email.title.invalid = Tautan aktivasi tidak lagi valid
