--- a/packages/@okta/i18n/src/properties/login_it.properties
+++ b/packages/@okta/i18n/src/properties/login_it.properties
@@ -392,7 +392,7 @@ enroll.symantecVip.passcode1.tooltip = Codice di sicurezza 1
 enroll.symantecVip.passcode2.placeholder = Codice di sicurezza 2
 enroll.symantecVip.passcode2.tooltip = Codice di sicurezza 2
 
-# Enroll Yubikey
+# Enroll YubiKey
 enroll.yubikey.title = Imposta YubiKey
 enroll.yubikey.subtitle = Inserisci la tua YubiKey in una porta USB e selezionala per generare un codice di verifica
 
@@ -402,7 +402,7 @@ enroll.totp.selectDevice = Selezionare il tipo di dispositivo
 enroll.totp.downloadApp = Scaricare <a href="{0}" class="inline-link">{1} da {2}</a> sul proprio dispositivo mobile.
 
 # Enroll HOTP
-enroll.hotp.restricted = Contatta l'amministratore per continuare la registrazione.
+enroll.hotp.restricted = Contatta l'amministratore per continuare con la registrazione.
 
 # Enroll Duo
 enroll.duo.title = Configurazione Duo Security
@@ -533,7 +533,7 @@ primaryauth.submit = Accedi
 primaryauth.newUser.tooltip=\u00C8 la prima volta che accedi a {0} da questo browser
 primaryauth.newUser.tooltip.close=Chiudi
 oktaVerify.description = Per accedere a questa risorsa, l'organizzazione richiede di effettuare l'accesso tramite il tuo dispositivo.
-oktaVerify.button = Accedi con Okta Verify su questo dispositivo
+oktaVerify.button = Accedi con Okta FastPass
 
 # IDP Discovery
 idpDiscovery.email.placeholder = E-mail
@@ -664,7 +664,7 @@ registration.default.callbackhook.error=Non \u00E8 possibile elaborare la tua re
 #Registration form error messages
 registration.error.userName.invalidEmail=Indirizzo e-mail non valido
 registration.error.password.passwordRequirementsNotMet=Requisiti password non rispettati
-registration.error.userName.notUniqueWithinOrg=Un account con questa e-mail esiste gi\u00E0
+registration.error.userName.notUniqueWithinOrg=Esiste gi\u00E0 un account con tale {0}
 registration.error.notUniqueWithinOrg.Email = Esiste gi\u00E0 un utente con questo indirizzo e-mail
 registration.error.notUniqueWithinOrg.custom = Esiste gi\u00E0 un utente con questo {0}
 registration.error.invalidLoginEmail.Email = 'Email' deve essere nel formato di un indirizzo e-mail
@@ -719,8 +719,11 @@ customUri.required.content.prompt = Nessun prompt visualizzato?
 customUri.required.content.download.title = Non hai Okta Verify?
 customUri.required.content.download.linkText = Scaricalo da qui
 customUri.required.content.button = Avvia Okta Verify
-universalLink.title = Accedi con Okta Verify su questo dispositivo
-universalLink.content = Apri Okta Verify per procedere con l'accesso. Se Okta Verify non si apre automaticamente, tocca il pulsante qui sotto per riaprirlo.
+universalLink.title = Accedi con Okta FastPass
+universalLink.content = Apri Okta Verify per procedere con l'accesso. Se Okta Verify non si \u00E8 aperto automaticamente, tocca il pulsante di seguito per riaprire Okta Verify.
+appLink.title = Accedi con Okta FastPass
+appLink.content = Se Okta Verify non si \u00E8 aperto automaticamente, tocca il pulsante di seguito per riaprire Okta Verify.
+oktaVerify.open.button = Apri Okta Verify
 oktaVerify.reopen.button = Riapri Okta Verify
 
 # Consent Required
@@ -769,6 +772,7 @@ idx.password.expiring.message = Alla scadenza della password non potrai pi\u00F9
 oie.password.incorrect.message = Password non corretta
 oie.selfservice.reset.password.not.allowed = La reimpostazione della password non \u00E8 consentita in questo momento. Contatta il supporto per ottenere assistenza.
 password.common = Questa password \u00E8 presente in un elenco di password usate comunemente. Prova un'altra password.
+idx.recovery.completed = Puoi ora eseguire l'accesso con il nome utente esistente e la nuova password.
 
 ## Phone
 oie.phone.label = Telefono
@@ -799,7 +803,10 @@ oie.phone.invalid = Numero di telefono non valido.
 oie.email.label = E-mail
 oie.email.authenticator.description = Verifica tramite link o codice inviato via e-mail
 oie.email.mfa.title = Verifica con l'e-mail
-oie.email.verify.alternate.sentText = Cerca il messaggio di verifica nella posta elettronica. Fai clic sul pulsante di verifica nell'e-mail o inserisci il codice qui sotto per continuare.
+oie.email.verify.alternate.magicLinkToEmailAddress = \u00C8 stato inviato un link magico tramite e-mail a <$1>{0}</$1>. 
+oie.email.verify.alternate.magicLinkToYourEmail = \u00C8 stato inviato un link magico tramite e-mail al <$1>tuo indirizzo e-mail</$1>. 
+oie.email.verify.alternate.instructions = Fai clic sul link nell'e-mail o immetti il codice di seguito per continuare.
+oie.email.verify.alternate.showCodeTextField = Immetti un codice dall'e-mail in alternativa
 oie.email.enroll.subtitle = Controlla la tua e-mail e inserisci il codice riportato di seguito.
 oie.email.return.link.expired.title = Verifica con l'e-mail
 
@@ -815,6 +822,16 @@ oie.webauthn.error.not.supported = La chiave di sicurezza e l'autenticatore biom
 oie.verify.webauth.title = Verifica tramite chiave di sicurezza o autenticatore biometrico
 oie.verify.webauthn.instructions = Ti verr\u00E0 chiesto di usare una chiave di sicurezza o una verifica biometrica (Windows Hello, Touch ID, ecc.). Segui le istruzioni per completare la verifica.
 oie.verify.webauthn.uv.required.instructions = Per accedere tramite questo autenticatore sono necessari una verifica biometrica o un PIN.
+oie.verify.webauthn.cant.verify = Non \u00E8 possibile verificare?
+oie.verify.webauthn.cant.verify.biometric.authenticator.title = Stai cercando di usare un autenticatore biometrico?
+oie.verify.webauthn.cant.verify.biometric.authenticator.description1 = Gli autenticatori biometrici, (impronta digitale, riconoscimento del volto, PIN) funzioneranno solo nello stesso dispositivo in cui sono stati configurati.
+oie.verify.webauthn.cant.verify.biometric.authenticator.description2 = Se disponibile, configura un altro metodo di sicurezza nel dispositivo usato per configurare l'autenticatore biometrico.
+oie.verify.webauthn.cant.verify.security.key.title = Stai cercando di usare una chiave di sicurezza?
+oie.verify.webauthn.cant.verify.security.key.description = Se hai configurato una chiave di sicurezza, inseriscila in una porta USB quando richiesto dal browser e tocca il pulsante o il disco dorato. Le chiavi di sicurezza possono essere usate in pi\u00F9 dispositivi.
+oie.verify.webauthn.cant.verify.enrollment.step1 = Apri il tuo dashboard di Okta (ad es. azienda.okta.com) nel dispositivo usato per configurare la chiave di sicurezza o l'autenticatore biometrico
+oie.verify.webauthn.cant.verify.enrollment.step2 = Vai a Impostazioni > Security Methods (Metodi di sicurezza)
+oie.verify.webauthn.cant.verify.enrollment.step3 = In Okta Verify fai clic su "Set up" (Configura)
+oie.verify.webauthn.cant.verify.enrollment.step4 = Scansiona il codice QR con Okta Verify e segui le istruzioni per completare la registrazione del tuo account
 
 ## Security Question
 oie.security.question.label = Domanda di sicurezza
@@ -856,9 +873,9 @@ oie.okta_verify.totp.enterCodeText = Inserisci il codice dell'app Okta Verify
 oie.okta_verify.push.title = Ricevi una notifica push
 oie.okta_verify.push.sent = Notifica push inviata
 oie.okta_verify.push.resend = Invia di nuovo la notifica push
-oie.okta_verify.signed_nonce.label = Usa Okta Verify su questo dispositivo
+oie.okta_verify.signed_nonce.label = Usa Okta FastPass
 oie.okta_verify.enroll.force.upgrade.title = Aggiorna Okta Verify
-oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Il dispositivo usato per configurare Okta Verify non soddisfa i requisiti di sicurezza dell'organizzazione perch\u00E9 non \u00E8 conforme a FIPS. Contatta l'amministratore per richiedere assistenza.
+oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Il dispositivo usato per configurare Okta Verify non soddisfa i requisiti di sicurezza dell'organizzazione perch\u00E9 non \u00E8 conforme a FIPS. Contatta il tuo amministratore per ricevere assistenza.
 oie.authenticator.app.non_fips_compliant_enrollment_app_update_required = La versione di Okta Verify nel dispositivo non soddisfa i requisiti di sicurezza dell'organizzazione. Per aggiungere l'account, aggiorna Okta Verify alla versione pi\u00F9 recente e riprova.
 oie.authenticator.app.method.push.verify.enable.biometrics = Risposta ricevuta, ma l'organizzazione richiede la biometria. Assicurati che il dispositivo supporti la biometria, che Okta Verify sia aggiornato, che la biometria sia abilitata per il tuo account in Okta Verify e riprova.
 oie.authenticator.app.method.push.verify.enable.biometrics.title = Abilita biometria in Okta Verify
@@ -868,6 +885,12 @@ oie.authenticator.app.method.push.verify.enable.biometrics.point2 = Okta Verify 
 oie.authenticator.app.method.push.verify.enable.biometrics.point3 = In Okta Verify la biometria \u00E8 abilitata per il tuo account
 oie.authenticator.app.method.push.enroll.enable.biometrics = L'organizzazione richiede la biometria. Per continuare, assicurati che il dispositivo supporti la biometria, quindi aggiungi il tuo account e abilita la biometria quando richiesto.
 oie.authenticator.app.method.push.enroll.enable.biometrics.title = Abilita la biometria per aggiungere un account in Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics = Risposta ricevuta, ma l'organizzazione richiede la biometria. Assicurati che il dispositivo supporti la biometria, che Okta Verify sia aggiornato, che la biometria sia abilitata per il tuo account in Okta Verify e riprova.
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.title = Abilita biometria in Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.description = Risposta ricevuta, ma l'organizzazione richiede la biometria. Assicurati di soddisfare i requisiti seguenti e quindi riprova:
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point1 = Il tuo dispositivo supporta la biometria
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point2 = Okta Verify \u00E8 aggiornato
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point3 = In Okta Verify la biometria \u00E8 abilitata per il tuo account
 
 ## Google authenticator
 oie.google_authenticator.label = Google Authenticator
@@ -930,6 +953,14 @@ oie.symantecVip.challenge.title = Verifica con {0}
 oie.symantecVip.challenge.description = Inserisci il codice di sicurezza generato dall'app {0}.
 oie.symantecVip.verify.passcode.label = Immetti codice di sicurezza
 
+## YubiKey Authenticator
+oie.yubikey.label = Autenticatore YubiKey
+oie.yubikey.authenticator.description = Verifica la tua identit\u00E0 con YubiKey
+oie.yubikey.enroll.title = Configura YubiKey
+oie.yubikey.challenge.title = Verifica con YubiKey
+oie.yubikey.description = Inserisci la YubiKey in una porta USB e toccala per generare un codice di verifica.
+oie.yubikey.passcode.label = Inserisci e quindi tocca la YubiKey
+
 ## Select authenticator enrollment
 oie.select.authenticators.enroll.title = Configura metodi di sicurezza
 oie.select.authenticators.enroll.subtitle = I metodi di sicurezza consentono di proteggere il tuo account, assicurando che solo tu possa accedere.
@@ -947,7 +978,8 @@ oie.select.authenticators.verify.subtitle = Seleziona una delle seguenti opzioni
 
 ## Success Redirect
 oie.success.text.signingIn = Accesso in corso
-oie.success.text.signingIn.with.appName = Accesso a {0} in corso
+oie.success.text.signingIn.with.ellipsis = Accesso in corso...
+oie.success.text.signingIn.with.appName = Accesso a {0}
 oie.success.text.signingIn.with.appName.and.identifier = Accesso a {0} come {1}
 
 ## Footer
@@ -1018,14 +1050,15 @@ errors.E0000150 = Hai raggiunto il limite di richieste tramite SMS. Riprova pi\u
 errors.E0000151 = Hai raggiunto il limite di richieste tramite chiamata. Riprova pi\u00F9 tardi.
 
 # Consent
-oie.consent.admin.title = richiede l'accesso a:
-oie.consent.enduser.title = vorrebbe:
+oie.consent.scopes.admin.title = richiede l'accesso a:
+oie.consent.scopes.enduser.title = vorrebbe:
 oie.consent.enduser.accept.label = S\u00EC, sono io
 oie.consent.enduser.deny.label = No, non sono io
 oie.consent.enduser.title = Hai appena provato ad accedere?
-oie.consent.enduser.email.allow.description = Per continuare, torna al dispositivo o alla finestra in cui hai richiesto il collegamento tramite e-mail. Puoi chiudere questa finestra in qualsiasi momento.
-oie.consent.enduser.deny.description = Puoi chiudere questa finestra in qualsiasi momento.
-oie.return.to.original.tab = Torna alla scheda originale.
+oie.consent.enduser.email.allow.title = Operazione riuscita. Torna alla scheda o alla finestra originale
+oie.consent.enduser.email.allow.description = Per continuare, torna alla scheda o alla finestra del browser originale usata per la verifica.
+oie.consent.enduser.deny.description = Chiudi questa finestra in qualsiasi momento.
+oie.return.to.original.tab = Chiudi questa finestra in qualsiasi momento.
 idx.operation.cancelled.by.user = Operazione annullata dall'utente.
 idx.transferred.to.new.tab = Flusso continuato in una nuova scheda.
 idx.return.link.expired = Questo link via e-mail \u00E8 scaduto. Per inviarlo di nuovo, torna alla schermata in cui lo hai richiesto.
