--- a/packages/@okta/i18n/src/properties/login_ms.properties
+++ b/packages/@okta/i18n/src/properties/login_ms.properties
@@ -137,9 +137,9 @@ errors.E0000082 = Setiap kod hanya boleh digunakan sekali. Sila tunggu kod bahar
 errors.E0000083 = KodLaluan adalah sah tetapi melebihi tingkap masa.
 errors.E0000084 = Ralat penilaian aplikasi.
 errors.E0000085 = Anda tidak mempunyai keizinan untuk mengakses akaun anda pada masa ini.
-errors.E0000086 = polisi ini tidak boleh diaktifkan pada masa ini.
-errors.E0000087 = Jawapan kepada soalan pemulihan tidak sepadan dengan rekod kami.
-errors.E0000090 = Peranan tertentu sudah ditetapkan kepada pengguna.
+errors.E0000086 = Polisi ini tidak dapat diaktifkan pada masa ini.
+errors.E0000087 = Jawapan soalan pemulihan tidak sepadan dengan rekod kami.
+errors.E0000090 = Peranan yang ditentukan sudah ditugaskan kepada pengguna.
 errors.E0000091 = Jenis peranan yang disediakan tidak sama seperti jenis peranan yang diperlukan.
 errors.E0000092 = Akses kepada aplikasi ini memerlukan pengesahihan semula: {0}
 errors.E0000093 = Telah melebihi had kiraan sasaran.
@@ -392,7 +392,7 @@ enroll.symantecVip.passcode1.tooltip = Kod keselamatan 1
 enroll.symantecVip.passcode2.placeholder = Kod keselamatan 2
 enroll.symantecVip.passcode2.tooltip = Kod keselamatan 2
 
-# Enroll Yubikey
+# Enroll YubiKey
 enroll.yubikey.title = Tetapkan YubiKey
 enroll.yubikey.subtitle = Masukkan YubiKey anda ke dalam port USB dan ketik untuk menjana kod pengesahan
 
@@ -533,7 +533,7 @@ primaryauth.submit = Log Masuk
 primaryauth.newUser.tooltip=Ini adalah kali pertama anda bersambung ke {0} dari pelayar ini
 primaryauth.newUser.tooltip.close=Tutup
 oktaVerify.description = Untuk mengakses sumber ini, organisasi anda menghendaki anda mengelog masuk menggunakan peranti anda.
-oktaVerify.button = Log masuk menggunakan Okta Verify pada peranti ini
+oktaVerify.button = Daftar Masuk dengan Okta FastPass
 
 # IDP Discovery
 idpDiscovery.email.placeholder = E-mel
@@ -664,7 +664,7 @@ registration.default.callbackhook.error=Kami tidak dapat memproses pendaftaran a
 #Registration form error messages
 registration.error.userName.invalidEmail=Alamat e-mel tidak sah
 registration.error.password.passwordRequirementsNotMet=Keperluan kata laluan tidak dipenuhi
-registration.error.userName.notUniqueWithinOrg=Suatu akaun dengan e-mel itu sudah wujud
+registration.error.userName.notUniqueWithinOrg=Akaun dengan {0} tersebut sudah wujud
 registration.error.notUniqueWithinOrg.Email = Pengguna dengan E-mel ini sudah wujud
 registration.error.notUniqueWithinOrg.custom = Pengguna dengan {0} ini sudah wujud
 registration.error.invalidLoginEmail.Email = 'Email' mestilah dalam bentuk alamat e-mel
@@ -719,8 +719,11 @@ customUri.required.content.prompt = Tidak mendapat gesaan?
 customUri.required.content.download.title = Tidak mempunyai Okta Verify?
 customUri.required.content.download.linkText = Muat turun di sini
 customUri.required.content.button = Lancarkan Okta Verify
-universalLink.title = Log masuk menggunakan Okta Verify pada peranti ini
-universalLink.content = Buka Okta Verify untuk meneruskan log masuk. Jika Okta Verify tidak dibuka secara automatik, ketik butang di bawah untuk membuka semula Okta Verify.
+universalLink.title = Daftar Masuk dengan Okta FastPass
+universalLink.content = Buka Okta Verify untuk meneruskan log masuk. Sekiranya Okta Verify tidak terbuka secara automatik, ketik butang di bawah untuk membuka semula Okta Verify.
+appLink.title = Daftar Masuk dengan Okta FastPass
+appLink.content = Sekiranya Okta Verify tidak terbuka secara automatik, ketik butang di bawah untuk membuka semula Okta Verify.
+oktaVerify.open.button = Buka Okta Verify
 oktaVerify.reopen.button = Buka semula Okta Verify
 
 # Consent Required
@@ -754,7 +757,7 @@ common.logo.alt = logo aria
 
 ## Generic
 oie.authenticator.enroll.error.fail = Tidak dapat mendaftarkan pengesah. Cuba lagi.
-oie.authenticator.verify.error.fail = Tidak dapat mengesahkan pengesah. Cuba lagi.
+oie.authenticator.verify.error.fail = Tidak dapat menentusahkan pengesah. Cuba lagi.
 
 ## Password
 oie.password.label = Kata laluan
@@ -767,8 +770,9 @@ oie.password.confirmPasswordLabel = Masukkan semula kata laluan
 oie.password.reset.verification = Tentu sahkan dengan salah satu kaedah keselamatan berikut untuk menetapkan semula kata laluan anda.
 idx.password.expiring.message = Apabila kata laluan anda luput, anda akan disekat daripada masuk ke akaun Okta anda.
 oie.password.incorrect.message = Kata laluan tidak betul
-oie.selfservice.reset.password.not.allowed = Tetap semula kata laluan tidak dibenarkan buat masa ini. Sila hubungi sokongan untuk mendapatkan bantuan.
+oie.selfservice.reset.password.not.allowed = Penetapan semula kata laluan tidak dibenarkan pada masa ini. Sila hubungi sokongan untuk mendapatkan bantuan.
 password.common = Kata laluan ini terdapat dalam senarai kata laluan yang biasa digunakan. Sila cuba kata laluan lain.
+idx.recovery.completed = Anda kini boleh mendaftar masuk dengan nama pengguna sedia ada dan kata laluan baharu anda.
 
 ## Phone
 oie.phone.label = Telefon
@@ -799,7 +803,10 @@ oie.phone.invalid = Nombor Telefon tidak sah.
 oie.email.label = E-mel
 oie.email.authenticator.description = Sahkan dengan pautan atau kod yang dihantar ke e-mel anda
 oie.email.mfa.title = Sahkan dengan e-mel anda
-oie.email.verify.alternate.sentText = Semak e-mel anda untuk mendapatkan mesej pengesahan. Klik butang pengesahan dalam e-mel anda atau masukkan kod di bawah untuk meneruskan.
+oie.email.verify.alternate.magicLinkToEmailAddress = Pautan ajaib e-mel telah dihantar ke <$1>{0}</$1>. 
+oie.email.verify.alternate.magicLinkToYourEmail = Pautan ajaib e-mel telah dihantar ke <$1>e-mel anda</$1>. 
+oie.email.verify.alternate.instructions = Klik pautan dalam e-mel tersebut atau masukkan kod di bawah untuk meneruskan.
+oie.email.verify.alternate.showCodeTextField = Sebaliknya, masukkan kod daripada e-mel tersebut
 oie.email.enroll.subtitle = Sila semak e-mel anda dan masukkan kod di bawah.
 oie.email.return.link.expired.title = Sahkan dengan e-mel anda
 
@@ -815,6 +822,16 @@ oie.webauthn.error.not.supported = Kunci keselamatan atau pengesah biometrik tid
 oie.verify.webauth.title = Sahkan dengan Kunci Keselamatan atau Pengesah Biometrik
 oie.verify.webauthn.instructions = Anda akan meminta untuk mendaftarkan kunci keselamatan atau pengesah biometrik (Windows Hello, Touch ID, dll.). Ikuti arahan untuk melengkapkan pengesahan.
 oie.verify.webauthn.uv.required.instructions = Pengesahan biometrik atau PIN diperlukan untuk log masuk dengan pengesah ini.
+oie.verify.webauthn.cant.verify = Tidak dapat membuat penentusahan?
+oie.verify.webauthn.cant.verify.biometric.authenticator.title = Adakah anda cuba menggunakan pengesah biometrik?
+oie.verify.webauthn.cant.verify.biometric.authenticator.description1 = Pengesah biometrik (cap jari, pengecaman wajah, PIN) hanya akan berfungsi pada peranti yang sama di mana ia disediakan.
+oie.verify.webauthn.cant.verify.biometric.authenticator.description2 = Sekiranya ada, sediakan kaedah keselamatan lain pada peranti yang anda gunakan untuk menyediakan pengesah biometrik anda.
+oie.verify.webauthn.cant.verify.security.key.title = Adakah anda cuba menggunakan kunci keselamatan?
+oie.verify.webauthn.cant.verify.security.key.description = Sekiranya anda telah menyediakan kunci keselamatan, masukkannya ke dalam port USB apabila diminta oleh pelayar dan ketik pada butang atau cakera emas. Kunci keselamatan boleh berfungsi pada berbilang peranti.
+oie.verify.webauthn.cant.verify.enrollment.step1 = Buka Papan Pemuka Okta anda (cth. syarikatanda.okta.com) pada peranti yang anda gunakan untuk menyediakan kunci keselamatan atau pengesah biometrik anda
+oie.verify.webauthn.cant.verify.enrollment.step2 = Pergi ke Tetapan > Kaedah Keselamatan
+oie.verify.webauthn.cant.verify.enrollment.step3 = Di Okta Verify, klik "Sediakan"
+oie.verify.webauthn.cant.verify.enrollment.step4 = Imbas kod QR menggunakan Okta Verify dan ikuti arahan untuk menyelesaikan pendaftaran akaun anda
 
 ## Security Question
 oie.security.question.label = Soalan Keselamatan
@@ -856,11 +873,11 @@ oie.okta_verify.totp.enterCodeText = Masukkan kod daripada aplikasi Okta Verify
 oie.okta_verify.push.title = Dapatkan pemberitahuan tolak
 oie.okta_verify.push.sent = Pemberitahuan tolak dihantar
 oie.okta_verify.push.resend = Hantar semula pemberitahuan tolak
-oie.okta_verify.signed_nonce.label = Gunakan Okta Verify pada peranti ini
+oie.okta_verify.signed_nonce.label = Gunakan Okta FastPass
 oie.okta_verify.enroll.force.upgrade.title = Kemas Kini Okta Verify
-oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Peranti yang digunakan untuk menyediakan Okta Verify tidak memenuhi syarat keselamatan organisasi anda kerana peranti ini tidak mematuhi FIPS. Hubungi pentadbir anda untuk mendapatkan bantuan.
+oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Peranti yang digunakan untuk menyediakan Okta Verify tidak memenuhi syarat keselamatan organisasi anda kerana ia tidak patuh FIPS. Hubungi pentadbir anda untuk mendapatkan bantuan.
 oie.authenticator.app.non_fips_compliant_enrollment_app_update_required = Versi Okta Verify pada peranti yang digunakan tidak memenuhi syarat keselamatan organisasi anda. Untuk menambahkan akaun anda, kemas kini Okta Verify kepada versi terkini, kemudian cuba lagi.
-oie.authenticator.app.method.push.verify.enable.biometrics = Maklum balas anda telah diterima, tetapi organisasi anda memerlukan biometrik. Pastikan peranti anda menyokong biometrik, Okta Verify adalah terkini dan biometrik didayakan untuk akaun anda di Okta Verify, kemudian cuba lagi.
+oie.authenticator.app.method.push.verify.enable.biometrics = Respons anda telah diterima, tetapi organisasi anda memerlukan biometrik. Pastikan peranti anda menyokong biometrik, Okta Verify adalah terkini dan biometrik didayakan untuk akaun anda di Okta Verify, kemudian cuba lagi.
 oie.authenticator.app.method.push.verify.enable.biometrics.title = Dayakan biometrik di Okta Verify
 oie.authenticator.app.method.push.verify.enable.biometrics.description = Maklum balas anda telah diterima, tetapi organisasi anda memerlukan biometrik. Pastikan anda memenuhi syarat berikut, kemudian cuba lagi:
 oie.authenticator.app.method.push.verify.enable.biometrics.point1 = Peranti anda menyokong biometrik
@@ -868,6 +885,12 @@ oie.authenticator.app.method.push.verify.enable.biometrics.point2 = Okta Verify 
 oie.authenticator.app.method.push.verify.enable.biometrics.point3 = Di Okta Verify, biometrik didayakan untuk akaun anda
 oie.authenticator.app.method.push.enroll.enable.biometrics = Organisasi anda memerlukan biometrik. Untuk meneruskan, pastikan peranti anda menyokong biometrik, kemudian tambahkan akaun anda dan dayakan biometrik apabila diminta.
 oie.authenticator.app.method.push.enroll.enable.biometrics.title = Dayakan biometrik untuk menambahkan akaun di Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics = Respons anda telah diterima, tetapi organisasi anda memerlukan biometrik. Pastikan peranti anda menyokong biometrik, Okta Verify adalah terkini dan biometrik didayakan untuk akaun anda dalam Okta Verify, kemudian cuba lagi.
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.title = Dayakan biometrik dalam Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.description = Respons anda telah diterima, tetapi organisasi anda memerlukan biometrik. Pastikan anda memenuhi syarat berikut, kemudian cuba lagi:
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point1 = Peranti anda menyokong biometrik
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point2 = Okta Verify adalah terkini
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point3 = Dalam Okta Verify, biometrik didayakan untuk akaun anda
 
 ## Google authenticator
 oie.google_authenticator.label = Google Authenticator
@@ -901,7 +924,7 @@ oie.numberchallenge.warning = Masih belum terima pemberitahuan tolak? Cuba buka 
 ## {0} refers to a number which is the correct answer for the number challenge
 oie.numberchallenge.instruction = Pada peranti mudah alih anda, buka prom Okta Verify, kemudian ketik <$1>{0}</$1> dalam Okta Verify untuk meneruskan.
 oie.numberchallenge.force.upgrade.title = Kemas Kini Okta Verify
-oie.authenticator.app.method.push.force.upgrade.number_challenge = Respons anda telah diterima tetapi versi Okta Verify anda tidak lagi disokong oleh organisasi anda. Untuk mengesahkan identiti anda dengan pemberitahuan tolak, kemas kini Okta Verify kepada versi terkini, kemudian cuba lagi.
+oie.authenticator.app.method.push.force.upgrade.number_challenge = Respons anda telah diterima, tetapi versi Okta Verify anda tidak lagi disokong oleh organisasi anda. Untuk menentusahkan identiti anda dengan pemberitahuan tolak, sila kemas kini Okta Verify kepada versi terkini, kemudian cuba lagi.
 
 ## RSA Authenticator
 oie.rsa.authenticator.description = Sahkan dengan memasukkan kod yang dijana oleh RSA SecurID
@@ -930,6 +953,14 @@ oie.symantecVip.challenge.title = Sahkan dengan {0}
 oie.symantecVip.challenge.description = Masukkan kod keselamatan yang dijana dari aplikasi {0}.
 oie.symantecVip.verify.passcode.label = Masukkan kod keselamatan
 
+## YubiKey Authenticator
+oie.yubikey.label = YubiKey Authenticator
+oie.yubikey.authenticator.description = Tentu sahkan identiti anda menggunakan YubiKey
+oie.yubikey.enroll.title = Sediakan YubiKey
+oie.yubikey.challenge.title = Tentu sahkan dengan YubiKey
+oie.yubikey.description = Masukkan YubiKey ke dalam port USB dan ketik padanya untuk menjana kod penentusahan.
+oie.yubikey.passcode.label = Masukkan, kemudian ketik YubiKey anda
+
 ## Select authenticator enrollment
 oie.select.authenticators.enroll.title = Sediakan kaedah keselamatan
 oie.select.authenticators.enroll.subtitle = Kaedah keselamatan membantu melindungi akaun anda dengan memastikan hanya anda yang mempunyai akses.
@@ -946,8 +977,9 @@ oie.select.authenticators.verify.title = Tentu sahkan bahawa ini ialah anda deng
 oie.select.authenticators.verify.subtitle = Buat pilihan daripada yang berikut
 
 ## Success Redirect
-oie.success.text.signingIn = Melog Masuk
-oie.success.text.signingIn.with.appName = Melog masuk ke {0}
+oie.success.text.signingIn = Mendaftar masuk
+oie.success.text.signingIn.with.ellipsis = Mendaftar masuk...
+oie.success.text.signingIn.with.appName = Mendaftar masuk ke {0}
 oie.success.text.signingIn.with.appName.and.identifier = Log masuk ke {0} sebagai {1}
 
 ## Footer
@@ -983,7 +1015,7 @@ enroll.mdm.step3 = Ikuti arahan dalam pelayar anda untuk menyediakan <span class
 
 ## safe mode
 oie.safe.mode.title = Persediaan pengesah tidak tersedia
-idx.error.server.safe.mode.enrollment.unavailable = Persediaan tidak tersedia buat sementara kerana penyelenggaraan pelayan. Cuba lagi kemudian.
+idx.error.server.safe.mode.enrollment.unavailable = Penyediaan tidak tersedia buat sementara waktu kerana penyelenggaraan pelayan. Cuba lagi kemudian.
 
 oie.primaryauth.submit = Daftar masuk
 ## Self Service Registraiton Form
@@ -994,7 +1026,7 @@ oie.user.profile.firstname= Nama pertama
 oie.user.profile.primary.email= E-mel
 oie.selfservice.unlock_user.success.message = Anda boleh log masuk dengan nama pengguna dan kata laluan sedia ada anda.
 oie.selfservice.unlock_user.failed.message = Kami tidak dapat membuka kunci akaun anda buat masa ini, sila hubungi pentadbir anda
-oie.selfservice.user.unlock.not.allowed = Buka Kunci Layan Diri tidak dibenarkan buat masa ini. Sila hubungi sokongan untuk mendapatkan bantuan.
+oie.selfservice.user.unlock.not.allowed = Buka Kunci Layan Diri tidak dibenarkan pada masa ini. Sila hubungi sokongan untuk mendapatkan bantuan.
 
 ## Terminal errors
 idx.session.expired = Sesi telah tamat tempoh.
@@ -1014,18 +1046,19 @@ authfactor.challenge.suspended_factor = Faktor ini digantung untuk akaun anda ke
 oie.post.password.update.auth.failure.error = Kata laluan anda telah dikemas kini tetapi terdapat masalah semasa anda mendaftar masuk. Sila cuba lagi atau hubungi pentadbir anda.
 ## {0} is the name of the application
 oie.assurance.unsatisfiable = Tidak dapat daftar masuk ke "{0}" pada masa ini. Hubungi pentadbir anda untuk mendapatkan bantuan.
-errors.E0000150 = Anda telah mencecah had permintaan sms, sila cuba lagi kemudian.
+errors.E0000150 = Anda telah mencapai had permintaan SMS, sila cuba sebentar lagi.
 errors.E0000151 = Anda telah mencecah had permintaan panggilan, sila cuba lagi kemudian.
 
 # Consent
-oie.consent.admin.title = ingin mengakses:
-oie.consent.enduser.title = ingin:
+oie.consent.scopes.admin.title = ingin mengakses:
+oie.consent.scopes.enduser.title = ingin:
 oie.consent.enduser.accept.label = Ya, itu saya
 oie.consent.enduser.deny.label = Tidak, itu bukan saya
 oie.consent.enduser.title = Adakah anda baru cuba mendaftar masuk?
-oie.consent.enduser.email.allow.description = Untuk meneruskan, kembali ke peranti atau tetingkap tempat anda meminta pautan e-mel. Anda boleh menutup tetingkap ini pada bila-bila masa.
-oie.consent.enduser.deny.description = Anda boleh menutup tetingkap ini pada bila-bila masa.
-oie.return.to.original.tab = Sila kembali ke tab asal.
+oie.consent.enduser.email.allow.title = Berjaya! Kembali ke tab atau tetingkap asal
+oie.consent.enduser.email.allow.description = Untuk meneruskan, kembali ke tab atau tetingkap pelayar asal yang anda gunakan untuk membuat penentusahan.
+oie.consent.enduser.deny.description = Tutup tetingkap ini pada bila-bila masa.
+oie.return.to.original.tab = Tutup tetingkap ini pada bila-bila masa.
 idx.operation.cancelled.by.user = Operasi dibatalkan oleh pengguna.
 idx.transferred.to.new.tab = Aliran diteruskan dalam tab baharu.
 idx.return.link.expired = Pautan e-mel ini telah tamat tempoh. Untuk menghantar semula, kembali ke skrin tempat anda memintanya.
@@ -1114,7 +1147,7 @@ idx.operation.cancelled.on.other.device = Akses ditolak pada peranti lain.
 idx.expired.activation.token = Pautan pengaktifan akaun anda tidak lagi sah. Minta e-mel pengaktifan baharu di bawah.
 idx.missing.activation.token = Ini boleh berlaku jika anda sudah mengaktifkan akaun anda, atau jika URL yang anda cuba gunakan tidak sah. Hubungi pentadbir anda untuk mendapatkan bantuan lanjut.
 idx.activating.inactive.user = Akaun anda telah digantung buat sementara waktu. Hubungi pentadbir anda untuk mendapatkan bantuan lanjut.
-idx.request.activation.email = Pautan pengaktifan baharu telah diminta. Sekiranya maklumat anda sepadan dengan rekod kami, anda akan menerima pautan pengaktifan baharu dalam peti masuk anda sebentar lagi.
+idx.request.activation.email = Pautan pengaktifan baharu telah diminta. Sekiranya maklumat anda sepadan dengan rekod kami, anda akan menerima pautan pengaktifan dalam peti masuk anda sebentar lagi.
 
 oie.activation.request.email.title.expire = Pautan pengaktifan telah tamat tempoh
 oie.activation.request.email.title.invalid = Pautan pengaktifan tidak lagi sah
