--- a/packages/@okta/i18n/src/properties/login_nl_NL.properties
+++ b/packages/@okta/i18n/src/properties/login_nl_NL.properties
@@ -138,8 +138,8 @@ errors.E0000083 = Wachtwoordcode is geldig maar heeft het tijdvenster overschred
 errors.E0000084 = Fout app-evaluatie.
 errors.E0000085 = U heeft op dit moment geen toestemming voor toegang tot uw account.
 errors.E0000086 = Dit beleid kan op dit moment niet worden geactiveerd.
-errors.E0000087 = Het antwoord van de herstelvraag komt niet overeen met onze records.
-errors.E0000090 = De opgegeven rol is al toegewezen aan de gebruiker.
+errors.E0000087 = Het antwoord op de herstelvraag komt niet overeen met onze gegevens.
+errors.E0000090 = De opgegeven rol is al aan de gebruiker toegewezen.
 errors.E0000091 = Het gegeven roltype is niet hetzelfde als het vereiste roltype.
 errors.E0000092 = Voor toegang tot deze applicatie is opnieuw authenticatie nodig: {0}
 errors.E0000093 = Doellimiet is overschreden
@@ -392,7 +392,7 @@ enroll.symantecVip.passcode1.tooltip = Beveiligingscode 1
 enroll.symantecVip.passcode2.placeholder = Beveiligingscode 2
 enroll.symantecVip.passcode2.tooltip = Beveiligingscode 2
 
-# Enroll Yubikey
+# Enroll YubiKey
 enroll.yubikey.title = YubiSleutel instellen
 enroll.yubikey.subtitle = Voeg uw YubiSleutel in een USB poort in en klik erop om een verificatiecode te genereren
 
@@ -402,7 +402,7 @@ enroll.totp.selectDevice = Selecteer uw apparaattype
 enroll.totp.downloadApp = Download <a href="{0}" class="inline-link">{1} van de {2}</a> op uw mobiele toestel.
 
 # Enroll HOTP
-enroll.hotp.restricted = Neem contact op met de beheerder om verder te gaan met de registratie.
+enroll.hotp.restricted = Neem contact op met de beheerder om verder te gaan met de inschrijving.
 
 # Enroll Duo
 enroll.duo.title = Duo Security instellen
@@ -533,7 +533,7 @@ primaryauth.submit = Aanmelden
 primaryauth.newUser.tooltip=Dit is de eerste keer dat u verbinding maakt met {0} vanaf deze browser
 primaryauth.newUser.tooltip.close=Sluiten
 oktaVerify.description = Uw organisatie vereist dat u zich aanmeldt met uw apparaat om toegang te krijgen tot deze bron.
-oktaVerify.button = Aanmelden met Okta Verify op dit apparaat
+oktaVerify.button = Aanmelden met Okta FastPass
 
 # IDP Discovery
 idpDiscovery.email.placeholder = E-mail
@@ -664,7 +664,7 @@ registration.default.callbackhook.error=Wij kunnen uw registratie op dit moment 
 #Registration form error messages
 registration.error.userName.invalidEmail=Ongeldig e-mailadres
 registration.error.password.passwordRequirementsNotMet=Het wachtwoord voldoet niet aan de vereisten
-registration.error.userName.notUniqueWithinOrg=Er bestaat al een account met dat e-mailadres
+registration.error.userName.notUniqueWithinOrg=Er bestaat al een account met deze {0}
 registration.error.notUniqueWithinOrg.Email = Er bestaat al een gebruiker met dit e-mailadres
 registration.error.notUniqueWithinOrg.custom = Er bestaat al een gebruiker met dit {0}
 registration.error.invalidLoginEmail.Email = 'Email' moeten in de vorm van een e-mailadres zijn
@@ -719,8 +719,11 @@ customUri.required.content.prompt = Geen vraag gekregen?
 customUri.required.content.download.title = Heb je Okta Verify niet?
 customUri.required.content.download.linkText = Hier downloaden
 customUri.required.content.button = Okta Verify starten
-universalLink.title = Aanmelden met Okta Verify op dit apparaat
-universalLink.content = Open Okta Verify om door te gaan met inloggen. Als Okta Verify niet automatisch geopend wordt, tik dan op onderstaande knop om Okta Verify opnieuw te openen.
+universalLink.title = Aanmelden met Okta FastPass
+universalLink.content = Open Okta Verify om door te gaan met inloggen. Als Okta Verify niet automatisch is geopend, tikt u op de knop hieronder om Okta Verify opnieuw te openen.
+appLink.title = Aanmelden met Okta FastPass
+appLink.content = Als Okta Verify niet automatisch is geopend, tikt u op de knop hieronder om Okta Verify opnieuw te openen.
+oktaVerify.open.button = Okta Verify openen
 oktaVerify.reopen.button = Okta Verify opnieuw openen
 
 # Consent Required
@@ -767,8 +770,9 @@ oie.password.confirmPasswordLabel = Wachtwoord opnieuw invoeren
 oie.password.reset.verification = Voer verificatie uit met een van de volgende beveiligingsmethoden om je wachtwoord opnieuw in te stellen.
 idx.password.expiring.message = Wanneer je wachtwoord verloopt, wordt je Okta-account vergrendeld.
 oie.password.incorrect.message = Wachtwoord is onjuist
-oie.selfservice.reset.password.not.allowed = Opnieuw instellen van wachtwoord is op dit moment niet toegestaan. Neem contact op met de ondersteuning voor hulp.
+oie.selfservice.reset.password.not.allowed = Wachtwoord kan op dit moment niet worden gereset. Vraag Ondersteuning om hulp.
 password.common = Dit wachtwoord is gevonden in een lijst van veelgebruikte wachtwoorden. Gelieve een ander wachtwoord te proberen.
+idx.recovery.completed = U kunt zich nu aanmelden met uw bestaande gebruikersnaam en nieuwe wachtwoord.
 
 ## Phone
 oie.phone.label = Telefoon
@@ -799,7 +803,10 @@ oie.phone.invalid = Ongeldig telefoonnummer.
 oie.email.label = E-mail
 oie.email.authenticator.description = Verifieer met een link of code die naar uw e-mail wordt gestuurd
 oie.email.mfa.title = Verifi\u00EBren met uw e-mailadres
-oie.email.verify.alternate.sentText = Controleer uw inbox voor een verificatiebericht. Klik op de verificatieknop in de e-mail of voer de onderstaande code in om door te gaan.
+oie.email.verify.alternate.magicLinkToEmailAddress = Een magische e-maillink is verzonden naar <$1>{0}</$1>. 
+oie.email.verify.alternate.magicLinkToYourEmail = Een magische e-maillink is verzonden naar <$1>uw e-mailadres</$1>. 
+oie.email.verify.alternate.instructions = Klik op de link in de e-mail of voer de code hieronder in om door te gaan.
+oie.email.verify.alternate.showCodeTextField = Voer in plaats hiervan een code uit de e-mail in
 oie.email.enroll.subtitle = Controleer uw e-mail en voer de code hieronder in.
 oie.email.return.link.expired.title = Verifi\u00EBren met uw e-mailadres
 
@@ -815,6 +822,16 @@ oie.webauthn.error.not.supported = Beveiligingssleutel of biometrische authentic
 oie.verify.webauth.title = Verifieer met Veiligheidssleutel of Biometrische authenticator
 oie.verify.webauthn.instructions = U wordt gevraagd om een veiligheidssleutel of biometrische verificatie (Windows Hello, Touch ID, enz.) te gebruiken. Volg de instructies om de verificatie te voltooien.
 oie.verify.webauthn.uv.required.instructions = Biometrische verificatie of een pincode is vereist om met deze authenticator in te loggen.
+oie.verify.webauthn.cant.verify = Verifi\u00EBren niet mogelijk?
+oie.verify.webauthn.cant.verify.biometric.authenticator.title = Gebruikt u een biometrie-authenticator?
+oie.verify.webauthn.cant.verify.biometric.authenticator.description1 = Biometrie-authenticators (vingerafdruk, gezichtsherkenning, pincode) werken alleen op het apparaat waarop ze zijn ingesteld.
+oie.verify.webauthn.cant.verify.biometric.authenticator.description2 = Stel indien beschikbaar een andere beveiligingsmethode in op het apparaat waarop u de biometrie-authenticator hebt ingesteld.
+oie.verify.webauthn.cant.verify.security.key.title = Gebruikt u een beveiligingssleutel?
+oie.verify.webauthn.cant.verify.security.key.description = Plaats de sleutel in een USB-poort als u een beveiligingssleutel hebt ingesteld en u hierom wordt gevraagd in de browser en tik op de knop of de gouden schijf. Beveiligingssleutels werken op meerdere apparaten.
+oie.verify.webauthn.cant.verify.enrollment.step1 = Open uw Okta-dashboard (bijvoorbeeld uwbedrijf.okta.com) op het apparaat waarop u uw beveiligingssleutel of biometrie-authenticator hebt ingesteld
+oie.verify.webauthn.cant.verify.enrollment.step2 = Ga naar Instellingen > Beveiligingsmethoden
+oie.verify.webauthn.cant.verify.enrollment.step3 = Klik in Okta Verify op "Instellen"
+oie.verify.webauthn.cant.verify.enrollment.step4 = Scan met Okta Verify de QR-code en volg de instructies om de inschrijving van uw account af te ronden
 
 ## Security Question
 oie.security.question.label = Beveiligingsvraag
@@ -856,18 +873,24 @@ oie.okta_verify.totp.enterCodeText = Voer de code van de Okta Verify-app in
 oie.okta_verify.push.title = Ontvang een pushmelding
 oie.okta_verify.push.sent = Pushmelding verzonden
 oie.okta_verify.push.resend = Verzend de pushmelding opnieuw
-oie.okta_verify.signed_nonce.label = Okta Verify gebruiken op dit apparaat
+oie.okta_verify.signed_nonce.label = Okta FastPass gebruiken
 oie.okta_verify.enroll.force.upgrade.title = Okta Verify bijwerken
-oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Het apparaat dat wordt gebruikt om Okta Verify in te stellen, voldoet niet aan de beveiligingsvereisten van uw organisatie omdat het niet conform FIPS is. Neem voor hulp contact op met je beheerder.
+oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Het apparaat dat wordt gebruikt om Okta Verify in te stellen, voldoet niet aan de beveiligingsvereisten van uw organisatie omdat het niet conform FIPS is. Vraag uw beheerder om hulp.
 oie.authenticator.app.non_fips_compliant_enrollment_app_update_required = De versie van Okta Verify op het gebruikte apparaat voldoet niet aan de beveiligingsvereisten van uw organisatie. Werk Okta Verify bij naar de nieuwste versie om je account toe te voegen en probeer het daarna opnieuw.
-oie.authenticator.app.method.push.verify.enable.biometrics = Je antwoord is ontvangen, maar voor je organisatie is biometrie vereist. Zorg ervoor dat je apparaat biometrie ondersteunt, dat Okta Verify up-to-date is en dat biometrie is ingeschakeld voor je account in Okta Verify. Probeer het daarna opnieuw.
+oie.authenticator.app.method.push.verify.enable.biometrics = Uw antwoord is ontvangen, maar voor uw organisatie is biometrie vereist. Zorg ervoor dat uw apparaat biometrie ondersteunt, dat Okta Verify up-to-date is en dat biometrie is ingeschakeld voor uw account in Okta Verify. Probeer het vervolgens opnieuw.
 oie.authenticator.app.method.push.verify.enable.biometrics.title = Biometrie inschakelen in Okta Verify
 oie.authenticator.app.method.push.verify.enable.biometrics.description = Je antwoord is ontvangen, maar voor je organisatie is biometrie vereist. Controleer of je aan de volgende vereisten voldoet en probeer het daarna opnieuw:
 oie.authenticator.app.method.push.verify.enable.biometrics.point1 = Je apparaat ondersteunt biometrische gegevens
 oie.authenticator.app.method.push.verify.enable.biometrics.point2 = Okta Verify is up-to-date
 oie.authenticator.app.method.push.verify.enable.biometrics.point3 = In Okta Verify worden biometrische gegevens ingeschakeld voor je account
-oie.authenticator.app.method.push.enroll.enable.biometrics = Voor je organisatie is biometrie vereist. Zorg ervoor dat je apparaat biometrie ondersteunt, voeg vervolgens je account toe en schakel biometrie in als daarom wordt gevraagd.
+oie.authenticator.app.method.push.enroll.enable.biometrics = Voor je organisatie is biometrie vereist. Zorg ervoor dat uw apparaat biometrie ondersteunt, voeg vervolgens uw account toe en schakel biometrie in als u daarom wordt gevraagd.
 oie.authenticator.app.method.push.enroll.enable.biometrics.title = Biometrie inschakelen om een account in Okta Verify toe te voegen
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics = Uw antwoord is ontvangen, maar voor uw organisatie is biometrie vereist. Zorg ervoor dat uw apparaat biometrie ondersteunt, dat Okta Verify up-to-date is en dat biometrie is ingeschakeld voor uw account in Okta Verify. Probeer het vervolgens opnieuw.
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.title = Biometrie inschakelen in Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.description = Uw antwoord is ontvangen, maar voor uw organisatie is biometrie vereist. Controleer of u aan de volgende vereisten voldoet en probeer het opnieuw:
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point1 = Uw apparaat ondersteunt biometrie
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point2 = Okta Verify is up-to-date
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point3 = In Okta Verify is biometrie ingeschakeld voor uw account
 
 ## Google authenticator
 oie.google_authenticator.label = Google Authenticator
@@ -930,6 +953,14 @@ oie.symantecVip.challenge.title = Verifi\u00EBren met {0}
 oie.symantecVip.challenge.description = Voer de gegenereerde beveiligingscode van de {0}-app in.
 oie.symantecVip.verify.passcode.label = Beveiligingscode invoeren
 
+## YubiKey Authenticator
+oie.yubikey.label = YubiKey Authenticator
+oie.yubikey.authenticator.description = Verifieer uw identiteit met YubiKey
+oie.yubikey.enroll.title = YubiKey instellen
+oie.yubikey.challenge.title = Verifi\u00EBren met YubiKey
+oie.yubikey.description = Plaats de YubiKey in een USB-poort en tik erop om een verificatiecode te genereren.
+oie.yubikey.passcode.label = Plaatsen en op uw YubiKey tikken
+
 ## Select authenticator enrollment
 oie.select.authenticators.enroll.title = Beveiligingsmethoden instellen
 oie.select.authenticators.enroll.subtitle = Beveiligingsmethoden helpen je je account te beschermen door ervoor te zorgen dat alleen jij toegang hebt.
@@ -946,8 +977,9 @@ oie.select.authenticators.verify.title = Verifi\u00EBren dat jij het bent met ee
 oie.select.authenticators.verify.subtitle = Maak een keuze uit de volgende opties
 
 ## Success Redirect
-oie.success.text.signingIn = Aan het aanmelden
-oie.success.text.signingIn.with.appName = Aan het aanmelden bij {0}
+oie.success.text.signingIn = Aanmelden
+oie.success.text.signingIn.with.ellipsis = Aanmelden...
+oie.success.text.signingIn.with.appName = Bezig met aanmelden bij {0}
 oie.success.text.signingIn.with.appName.and.identifier = Aanmelden bij {0} als {1}
 
 ## Footer
@@ -983,7 +1015,7 @@ enroll.mdm.step3 = Volg de instructies in uw browser om <span class="semi-strong
 
 ## safe mode
 oie.safe.mode.title = Authenticator-instelling niet beschikbaar
-idx.error.server.safe.mode.enrollment.unavailable = De installatie is tijdelijk niet beschikbaar vanwege serveronderhoud. Probeer het later opnieuw.
+idx.error.server.safe.mode.enrollment.unavailable = Setup is tijdelijk niet beschikbaar vanwege serveronderhoud. Probeer het later opnieuw.
 
 oie.primaryauth.submit = Aanmelden
 ## Self Service Registraiton Form
@@ -994,7 +1026,7 @@ oie.user.profile.firstname= Voornaam
 oie.user.profile.primary.email= E-mail
 oie.selfservice.unlock_user.success.message = U kunt zich aanmelden met uw bestaande gebruikersnaam en wachtwoord.
 oie.selfservice.unlock_user.failed.message = Je account kan op dit moment niet worden ontgrendeld. Neem contact op met de beheerder.
-oie.selfservice.user.unlock.not.allowed = Selfservice ontgrendelen is op dit moment niet toegestaan. Neem contact op met de ondersteuning voor hulp.
+oie.selfservice.user.unlock.not.allowed = Selfservice ontgrendelen is op dit moment niet toegestaan. Vraag Ondersteuning om hulp.
 
 ## Terminal errors
 idx.session.expired = De sessie is verlopen.
@@ -1014,18 +1046,19 @@ authfactor.challenge.suspended_factor = Deze factor is opgeschort voor je accoun
 oie.post.password.update.auth.failure.error = Je wachtwoord is bijgewerkt, maar er is een probleem opgetreden bij het aanmelden. Probeer het opnieuw of neem contact op met de beheerder.
 ## {0} is the name of the application
 oie.assurance.unsatisfiable = Kan op dit moment niet inloggen op "{0}". Neem voor hulp contact op met de systeembeheerder.
-errors.E0000150 = U heeft het maximale aantal sms-verzoeken bereikt. Probeer het later opnieuw.
+errors.E0000150 = U hebt het maximale aantal sms-verzoeken bereikt. Probeer het later opnieuw.
 errors.E0000151 = U heeft het maximale aantal oproepverzoeken bereikt. Probeer het later opnieuw.
 
 # Consent
-oie.consent.admin.title = wil toegang tot:
-oie.consent.enduser.title = wil:
+oie.consent.scopes.admin.title = wil toegang tot:
+oie.consent.scopes.enduser.title = wil:
 oie.consent.enduser.accept.label = Ja, dat ben ik
 oie.consent.enduser.deny.label = Nee, dat ben ik niet
 oie.consent.enduser.title = Heb je net geprobeerd je aan te melden?
-oie.consent.enduser.email.allow.description = Ga terug naar het apparaat of het venster waarmee je de e-maillink hebt aangevraagd, om door te gaan. Je kunt dit venster op elk gewenst moment sluiten.
-oie.consent.enduser.deny.description = Je kunt dit venster op elk gewenst moment sluiten.
-oie.return.to.original.tab = Ga terug naar het oorspronkelijke tabblad.
+oie.consent.enduser.email.allow.title = Gelukt. Terug naar het oorspronkelijke tabblad of venster
+oie.consent.enduser.email.allow.description = Als u wilt doorgaan, gaat u terug naar het oorspronkelijke browsertabblad of -venster waarin u zich hebt geverifieerd.
+oie.consent.enduser.deny.description = Sluit dit venster wanneer u wilt.
+oie.return.to.original.tab = Sluit dit venster wanneer u wilt.
 idx.operation.cancelled.by.user = Bewerking geannuleerd door gebruiker.
 idx.transferred.to.new.tab = Proces gaat verder op een nieuw tabblad.
 idx.return.link.expired = De e-maillink is verlopen. Ga naar het scherm waarin je de link hebt aangevraagd om deze opnieuw te verzenden.
@@ -1108,12 +1141,12 @@ idx.device.activated = Volg de instructies op je apparaat voor volgende stappen
 idx.device.not.activated.consent.denied = Je apparaat kan niet worden geactiveerd omdat je geen toegang hebt verleend
 idx.device.not.activated.internal.error = Je apparaat kan niet worden geactiveerd vanwege een interne fout
 idx.invalid.device.code = Ongeldige code. Probeer het opnieuw.
-idx.operation.cancelled.on.other.device = Toegang geweigerd op ander apparaat
+idx.operation.cancelled.on.other.device = Toegang geweigerd op ander apparaat.
 
 # Email activation
 idx.expired.activation.token = Uw accountactiveringslink is niet langer geldig. Vraag hieronder een nieuwe activeringsmail aan.
-idx.missing.activation.token = Dit kan gebeuren als u uw account al heeft geactiveerd of als de URL die u probeert te gebruiken, ongeldig is. Neem contact op met uw beheerder voor verdere hulp.
-idx.activating.inactive.user = Uw account is tijdelijk opgeschort. Neem contact op met uw beheerder voor verdere hulp.
+idx.missing.activation.token = Dit kan gebeuren als u uw account al hebt geactiveerd of als de gebruikte URL ongeldig is. Vraag uw beheerder om hulp.
+idx.activating.inactive.user = Uw account is tijdelijk opgeschort. Vraag uw beheerder om hulp.
 idx.request.activation.email = Nieuwe activeringslink aangevraagd. Als uw gegevens overeenkomen met onze gegevens, ontvangt u binnenkort een nieuwe activeringslink in uw postvak.
 
 oie.activation.request.email.title.expire = Activeringslink is verlopen
