--- a/packages/@okta/i18n/src/properties/login_sv.properties
+++ b/packages/@okta/i18n/src/properties/login_sv.properties
@@ -392,7 +392,7 @@ enroll.symantecVip.passcode1.tooltip = S\u00E4kerhetskod 1
 enroll.symantecVip.passcode2.placeholder = S\u00E4kerhetskod 2
 enroll.symantecVip.passcode2.tooltip = S\u00E4kerhetskod 2
 
-# Enroll Yubikey
+# Enroll YubiKey
 enroll.yubikey.title = St\u00E4ll in YubiKey
 enroll.yubikey.subtitle = S\u00E4tt i din YubiKey i en USB-port och tryck p\u00E5 den f\u00F6r att skapa en verifieringskod
 
@@ -525,15 +525,15 @@ oktaverify.numberchallenge.explain = Det h\u00E4r extra steget bekr\u00E4ftar f\
 
 # Username & Password
 primaryauth.title = Logga in
-primaryauth.username.placeholder = L\u00F6senord
-primaryauth.username.tooltip = L\u00F6senord
+primaryauth.username.placeholder = Anv\u00E4ndarnamn
+primaryauth.username.tooltip = Anv\u00E4ndarnamn
 primaryauth.password.placeholder = L\u00F6senord
 primaryauth.password.tooltip = L\u00F6senord
 primaryauth.submit = Logga in
 primaryauth.newUser.tooltip=Detta \u00E4r f\u00F6rsta g\u00E5ngen du ansluter till {0} fr\u00E5n den h\u00E4r webbl\u00E4saren
 primaryauth.newUser.tooltip.close=St\u00E4ng
 oktaVerify.description = Din organisation kr\u00E4ver att du loggar in med din enhet f\u00F6r att anv\u00E4nda resursen.
-oktaVerify.button = Logga in p\u00E5 enheten med Okta Verify
+oktaVerify.button = Logga in med Okta FastPass
 
 # IDP Discovery
 idpDiscovery.email.placeholder = E-post
@@ -664,7 +664,7 @@ registration.default.callbackhook.error=Vi kunde inte processa din registrering 
 #Registration form error messages
 registration.error.userName.invalidEmail=Ogiltig e-postadress
 registration.error.password.passwordRequirementsNotMet=Kraven f\u00F6r l\u00F6senord uppfylldes inte
-registration.error.userName.notUniqueWithinOrg=Ett konto med den h\u00E4r e-postadressen existerar redan
+registration.error.userName.notUniqueWithinOrg=Ett konto med det {0} finns redan
 registration.error.notUniqueWithinOrg.Email = En anv\u00E4ndare med den h\u00E4r e-postadressen existerar redan
 registration.error.notUniqueWithinOrg.custom = En anv\u00E4ndare med den h\u00E4r {0} existerar redan
 registration.error.invalidLoginEmail.Email = 'Email' m\u00E5ste vara i formatet av en e-postadress
@@ -719,8 +719,11 @@ customUri.required.content.prompt = S\u00E5g du inte en prompt?
 customUri.required.content.download.title = Har du inte Okta Verify?
 customUri.required.content.download.linkText = Ladda ned h\u00E4r
 customUri.required.content.button = \u00D6ppna Okta Verify
-universalLink.title = Logga in p\u00E5 enheten med Okta Verify
-universalLink.content = \u00D6ppna Okta Verify f\u00F6r att forts\u00E4tta med inloggningen. Om Okta Verify inte \u00F6ppnades automatiskt, tryck p\u00E5 knappen nedan f\u00F6r att \u00F6ppna Okta Verify igen.
+universalLink.title = Logga in med Okta FastPass
+universalLink.content = \u00D6ppna Okta Verify f\u00F6r att forts\u00E4tta med inloggningen. Om Okta Verify inte \u00F6ppnades automatiskt trycker du p\u00E5 knappen nedan f\u00F6r att \u00F6ppna Okta Verify igen.
+appLink.title = Logga in med Okta FastPass
+appLink.content = Om Okta Verify inte \u00F6ppnades automatiskt trycker du p\u00E5 knappen nedan f\u00F6r att \u00F6ppna Okta Verify igen.
+oktaVerify.open.button = \u00D6ppna Okta Verify
 oktaVerify.reopen.button = \u00D6ppna Okta Verify igen
 
 # Consent Required
@@ -769,6 +772,7 @@ idx.password.expiring.message = N\u00E4r ditt l\u00F6senord upph\u00F6r att g\u0
 oie.password.incorrect.message = L\u00F6senordet \u00E4r felaktigt
 oie.selfservice.reset.password.not.allowed = Det \u00E4r inte till\u00E5tet att \u00E5terst\u00E4lla l\u00F6senord just nu. Kontakta support f\u00F6r att f\u00E5 hj\u00E4lp.
 password.common = Det h\u00E4r l\u00F6senordet hittades i en lista \u00F6ver vanliga l\u00F6senord. Prova ett annat l\u00F6senord.
+idx.recovery.completed = Du kan nu logga in med ditt befintliga anv\u00E4ndarnamn och nya l\u00F6senord.
 
 ## Phone
 oie.phone.label = Telefon
@@ -799,7 +803,10 @@ oie.phone.invalid = Ogiltigt telefonnummer.
 oie.email.label = E-post
 oie.email.authenticator.description = Verifiera med en l\u00E4nk eller kod som skickas till din e-post
 oie.email.mfa.title = Verifiera med din e-post
-oie.email.verify.alternate.sentText = Se din e-post \u2013 vi har skickat ett verifieringsmeddelande. Klicka p\u00E5 verifieringsknappen i e-postmeddelandet eller klicka p\u00E5 koden nedan f\u00F6r att g\u00E5 vidare.
+oie.email.verify.alternate.magicLinkToEmailAddress = En magisk l\u00E4nk skickades med e-post till <$1>{0}</$1>. 
+oie.email.verify.alternate.magicLinkToYourEmail = En magisk l\u00E4nk skickades med e-post till <$1>din e-postadress</$1>. 
+oie.email.verify.alternate.instructions = Klicka p\u00E5 l\u00E4nken i e-postmeddelandet eller ange koden nedan f\u00F6r att forts\u00E4tta.
+oie.email.verify.alternate.showCodeTextField = Ange ist\u00E4llet en kod fr\u00E5n e-postmeddelandet
 oie.email.enroll.subtitle = V\u00E4nligen se din e-post och ange koden du f\u00E5tt nedan.
 oie.email.return.link.expired.title = Verifiera med din e-post
 
@@ -815,6 +822,16 @@ oie.webauthn.error.not.supported = S\u00E4kerhetsnyckel eller biometrisk autenti
 oie.verify.webauth.title = Verifiera med s\u00E4kerhetsnyckel eller biometrisk autentisering
 oie.verify.webauthn.instructions = Du kommer att ombes att anv\u00E4nda en s\u00E4kerhetsnyckel eller biometrisk autentisering (Windows Hello, Touch ID etc). F\u00F6lj anvisningarna f\u00F6r att verifiera dig.
 oie.verify.webauthn.uv.required.instructions = Biometrisk verifiering eller PIN-kod kr\u00E4vs f\u00F6r att logga in med denna typ av autentisering.
+oie.verify.webauthn.cant.verify = G\u00E5r det inte att verifiera?
+oie.verify.webauthn.cant.verify.biometric.authenticator.title = F\u00F6rs\u00F6ker du att anv\u00E4nda en biometrisk autentiserare?
+oie.verify.webauthn.cant.verify.biometric.authenticator.description1 = Biometriska autentiserare (fingeravtryck, ansiktsigenk\u00E4nning, PIN) fungerar bara p\u00E5 samma enhet som de st\u00E4lldes in p\u00E5.
+oie.verify.webauthn.cant.verify.biometric.authenticator.description2 = St\u00E4ll in en annan s\u00E4kerhetsmetod om det \u00E4r tillg\u00E4ngligt p\u00E5 den enhet som du anv\u00E4nde f\u00F6r att konfigurera din biometriska autentiserare.
+oie.verify.webauthn.cant.verify.security.key.title = F\u00F6rs\u00F6ker du att anv\u00E4nda en s\u00E4kerhetsnyckel?
+oie.verify.webauthn.cant.verify.security.key.description = Om du har konfigurerat en s\u00E4kerhetsnyckel s\u00E4tter du in den i en USB-port n\u00E4r du uppmanas av webbl\u00E4saren och trycker p\u00E5 knappen eller guldskivan. S\u00E4kerhetsnycklar kan fungera p\u00E5 flera enheter.
+oie.verify.webauthn.cant.verify.enrollment.step1 = \u00D6ppna din Okta-kontrollpanel (t.ex. yourcompany.okta.com) p\u00E5 den enhet som du anv\u00E4nde f\u00F6r att st\u00E4lla in din s\u00E4kerhetsnyckel eller biometriska autentiserare
+oie.verify.webauthn.cant.verify.enrollment.step2 = G\u00E5 till Inst\u00E4llningar > S\u00E4kerhetsmetoder
+oie.verify.webauthn.cant.verify.enrollment.step3 = Klicka p\u00E5 Konfigurera (Set Up) p\u00E5 Okta Verify
+oie.verify.webauthn.cant.verify.enrollment.step4 = Skanna QR-koden med Okta Verify och f\u00F6lj instruktionerna f\u00F6r att slutf\u00F6ra registreringen av ditt konto
 
 ## Security Question
 oie.security.question.label = S\u00E4kerhetsfr\u00E5ga
@@ -856,18 +873,24 @@ oie.okta_verify.totp.enterCodeText = Ange kod fr\u00E5n Okta Verify-appen
 oie.okta_verify.push.title = F\u00E5 ett push-meddelande
 oie.okta_verify.push.sent = Push-meddelande skickat
 oie.okta_verify.push.resend = Skicka pushmeddelandet igen
-oie.okta_verify.signed_nonce.label = Anv\u00E4nd Okta Verify p\u00E5 den h\u00E4r enheten
+oie.okta_verify.signed_nonce.label = Anv\u00E4nd Okta FastPass
 oie.okta_verify.enroll.force.upgrade.title = Uppdatera Okta Verify
 oie.authenticator.app.non_fips_compliant_enrollment_device_incompatible = Enheten som anv\u00E4nds f\u00F6r att konfigurera Okta Verify uppfyller inte din organisations s\u00E4kerhetskrav eftersom den inte \u00E4r FIPS-kompatibel. Kontakta din administrat\u00F6r om du beh\u00F6ver hj\u00E4lp.
 oie.authenticator.app.non_fips_compliant_enrollment_app_update_required = Versionen av Okta Verify p\u00E5 enheten uppfyller inte din organisations s\u00E4kerhetskrav. Uppdatera Okta Verify till den senaste versionen och f\u00F6rs\u00F6k sedan igen f\u00F6r att l\u00E4gga till kontot.
-oie.authenticator.app.method.push.verify.enable.biometrics = Ditt svar togs emot men din organisation kr\u00E4ver biometri. Se till att enheten har st\u00F6d f\u00F6r biometri, att Okta Verify \u00E4r uppdaterad och att biometri \u00E4r aktiverat med ditt konto i Okta Verify och f\u00F6rs\u00F6k sedan igen.
+oie.authenticator.app.method.push.verify.enable.biometrics = Ditt svar togs emot, men din organisation kr\u00E4ver biometri. Se till att enheten har st\u00F6d f\u00F6r biometri, att Okta Verify \u00E4r uppdaterad och att biometri \u00E4r aktiverat med ditt konto i Okta Verify och f\u00F6rs\u00F6k sedan igen.
 oie.authenticator.app.method.push.verify.enable.biometrics.title = Aktivera biometri i Okta Verify
 oie.authenticator.app.method.push.verify.enable.biometrics.description = Ditt svar togs emot men din organisation kr\u00E4ver biometri. Se till att du uppfyller f\u00F6ljande krav och f\u00F6rs\u00F6k sedan igen:
 oie.authenticator.app.method.push.verify.enable.biometrics.point1 = Din enhet st\u00F6der biometri
 oie.authenticator.app.method.push.verify.enable.biometrics.point2 = Okta Verify \u00E4r uppdaterad
 oie.authenticator.app.method.push.verify.enable.biometrics.point3 = I Okta Verify \u00E4r biometri aktiverat f\u00F6r ditt konto
-oie.authenticator.app.method.push.enroll.enable.biometrics = Din organisation kr\u00E4ver biometri. Se till att enheten har st\u00F6d f\u00F6r biometri f\u00F6r att forts\u00E4tta, och l\u00E4gg sedan till ditt konto och aktivera biometri n\u00E4r du blir tillfr\u00E5gad.
+oie.authenticator.app.method.push.enroll.enable.biometrics = Din organisation kr\u00E4ver biometri. Se till att enheten har st\u00F6d f\u00F6r biometri f\u00F6r att forts\u00E4tta och l\u00E4gg sedan till ditt konto och aktivera biometri n\u00E4r du blir tillfr\u00E5gad.
 oie.authenticator.app.method.push.enroll.enable.biometrics.title = Aktivera biometri f\u00F6r att l\u00E4gga till ett konto i Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics = Ditt svar togs emot, men din organisation kr\u00E4ver biometri. Se till att enheten har st\u00F6d f\u00F6r biometri, att Okta Verify \u00E4r uppdaterad och att biometri \u00E4r aktiverat med ditt konto i Okta Verify och f\u00F6rs\u00F6k sedan igen.
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.title = Aktivera biometri i Okta Verify
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.description = Ditt svar togs emot, men din organisation kr\u00E4ver biometri. Se till att du uppfyller f\u00F6ljande krav och f\u00F6rs\u00F6k sedan igen:
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point1 = Din enhet st\u00F6der biometri
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point2 = Okta Verify \u00E4r uppdaterad
+oie.authenticator.oktaverify.method.totp.verify.enable.biometrics.point3 = I Okta Verify \u00E4r biometri aktiverat f\u00F6r ditt konto
 
 ## Google authenticator
 oie.google_authenticator.label = Google Authenticator
@@ -901,7 +924,7 @@ oie.numberchallenge.warning = Har du inte f\u00E5tt ett pushmeddelande \u00E4n? 
 ## {0} refers to a number which is the correct answer for the number challenge
 oie.numberchallenge.instruction = \u00D6ppna Okta Verify-meddelandet p\u00E5 din mobila enhet och tryck sedan p\u00E5 <$1>{0}</$1> i Okta Verify f\u00F6r att g\u00E5 vidare.
 oie.numberchallenge.force.upgrade.title = Uppdatera Okta Verify
-oie.authenticator.app.method.push.force.upgrade.number_challenge = Ditt svar har tagits emot, men din Okta Verify-version st\u00F6ds inte l\u00E4ngre av din organisation. Uppdatera Okta Verify till den senaste versionen och f\u00F6rs\u00F6k sedan igen f\u00F6r att verifiera din identitet med push-aviseringar.
+oie.authenticator.app.method.push.force.upgrade.number_challenge = Ditt svar togs emot men din version av Okta Verify st\u00F6ds inte l\u00E4ngre av din organisation. Uppdatera Okta Verify till den senaste versionen och f\u00F6rs\u00F6k sedan igen f\u00F6r att verifiera din identitet med push-aviseringar.
 
 ## RSA Authenticator
 oie.rsa.authenticator.description = Verifiera genom att ange en kod som genereras av RSA SecurID
@@ -930,6 +953,14 @@ oie.symantecVip.challenge.title = Verifiera med {0}
 oie.symantecVip.challenge.description = Ange den genererade s\u00E4kerhetskoden fr\u00E5n {0}-appen
 oie.symantecVip.verify.passcode.label = Fyll i s\u00E4kerhetskod
 
+## YubiKey Authenticator
+oie.yubikey.label = YubiKey-autentiserare
+oie.yubikey.authenticator.description = Verifiera din identitet genom YubiKey
+oie.yubikey.enroll.title = St\u00E4ll in YubiKey
+oie.yubikey.challenge.title = Verifiera med YubiKey
+oie.yubikey.description = S\u00E4tt in YubiKey i en USB-port och tryck p\u00E5 den f\u00F6r att generera en verifikationskod.
+oie.yubikey.passcode.label = S\u00E4tt in och tryck sedan p\u00E5 din YubiKey
+
 ## Select authenticator enrollment
 oie.select.authenticators.enroll.title = St\u00E4ll in s\u00E4kerhetsmetoder
 oie.select.authenticators.enroll.subtitle = S\u00E4kerhetsmetoder hj\u00E4lper dig att skydda ditt konto genom att s\u00E4kerst\u00E4lla att bara du har \u00E5tkomst.
@@ -947,6 +978,7 @@ oie.select.authenticators.verify.subtitle = V\u00E4lj bland f\u00F6ljande altern
 
 ## Success Redirect
 oie.success.text.signingIn = Loggar in
+oie.success.text.signingIn.with.ellipsis = Loggar in ...
 oie.success.text.signingIn.with.appName = Loggar in p\u00E5 {0}
 oie.success.text.signingIn.with.appName.and.identifier = Loggar in p\u00E5 {0} som {1}
 
@@ -994,7 +1026,7 @@ oie.user.profile.firstname= F\u00F6rnamn
 oie.user.profile.primary.email= E-post
 oie.selfservice.unlock_user.success.message = Du kan logga in med ditt existerande anv\u00E4ndarnamn och l\u00F6senord.
 oie.selfservice.unlock_user.failed.message = Vi kan inte l\u00E5sa upp ditt konto nu. Kontakta din administrat\u00F6r
-oie.selfservice.user.unlock.not.allowed = Att sj\u00E4lv l\u00E5sa upp \u00E4r inte till\u00E5tet just nu. Kontakta support f\u00F6r att f\u00E5 hj\u00E4lp.
+oie.selfservice.user.unlock.not.allowed = Self Service Unlock \u00E4r inte till\u00E5tet just nu. Kontakta support f\u00F6r att f\u00E5 hj\u00E4lp.
 
 ## Terminal errors
 idx.session.expired = Sessionen har upph\u00F6rt att g\u00E4lla.
@@ -1018,14 +1050,15 @@ errors.E0000150 = Du har n\u00E5tt gr\u00E4nsen f\u00F6r SMS-f\u00F6rfr\u00E5gni
 errors.E0000151 = Du har n\u00E5tt gr\u00E4nsen f\u00F6r samtalsf\u00F6rfr\u00E5gningar. V\u00E4nligen f\u00F6rs\u00F6k igen senare.
 
 # Consent
-oie.consent.admin.title = vill ha \u00E5tkomst till:
-oie.consent.enduser.title = skulle vilja:
+oie.consent.scopes.admin.title = vill ha \u00E5tkomst till:
+oie.consent.scopes.enduser.title = skulle vilja:
 oie.consent.enduser.accept.label = Ja, det \u00E4r jag
 oie.consent.enduser.deny.label = Nej, det \u00E4r inte jag
 oie.consent.enduser.title = F\u00F6rs\u00F6kte du precis logga in?
-oie.consent.enduser.email.allow.description = G\u00E5 tillbaka till enheten eller f\u00F6nstret d\u00E4r du beg\u00E4rde e-postl\u00E4nken f\u00F6r att forts\u00E4tta. Du kan st\u00E4nga detta f\u00F6nster n\u00E4r som helst.
-oie.consent.enduser.deny.description = Du kan st\u00E4nga detta f\u00F6nster n\u00E4r som helst.
-oie.return.to.original.tab = G\u00E5 tillbaka till originalfliken.
+oie.consent.enduser.email.allow.title = Klart! G\u00E5 tillbaka till originalfliken eller f\u00F6nstret
+oie.consent.enduser.email.allow.description = G\u00E5 tillbaka till originalfliken eller f\u00F6nstret du anv\u00E4nde f\u00F6r verifieringen f\u00F6r att forts\u00E4tta.
+oie.consent.enduser.deny.description = St\u00E4ng n\u00E4r som helst det h\u00E4r f\u00F6nstret.
+oie.return.to.original.tab = St\u00E4ng n\u00E4r som helst det h\u00E4r f\u00F6nstret.
 idx.operation.cancelled.by.user = \u00C5tg\u00E4rden avbr\u00F6ts av anv\u00E4ndaren.
 idx.transferred.to.new.tab = Fl\u00F6det forts\u00E4tter i en ny flik.
 idx.return.link.expired = E-postl\u00E4nken har g\u00E5tt ut. \u00C5terg\u00E5 till sk\u00E4rmen d\u00E4r du beg\u00E4rde den f\u00F6r att skicka den igen.
@@ -1113,7 +1146,7 @@ idx.operation.cancelled.on.other.device = \u00C5tkomst nekad p\u00E5 andra enhet
 # Email activation
 idx.expired.activation.token = L\u00E4nken f\u00F6r aktivering av ditt konto \u00E4r inte l\u00E4ngre giltig. Beg\u00E4r ett nytt aktiveringsmeddelande nedan.
 idx.missing.activation.token = Detta kan h\u00E4nda om du redan har aktiverat ditt konto eller om webbadressen du f\u00F6rs\u00F6ker anv\u00E4nda \u00E4r ogiltig. Kontakta din administrat\u00F6r f\u00F6r hj\u00E4lp.
-idx.activating.inactive.user = Ditt konto har tillf\u00E4lligt st\u00E4ngts av. Kontakta din administrat\u00F6r f\u00F6r hj\u00E4lp.
+idx.activating.inactive.user = Ditt konto \u00E4r tillf\u00E4lligt pausat. Kontakta din administrat\u00F6r f\u00F6r hj\u00E4lp.
 idx.request.activation.email = Ny aktiveringsl\u00E4nk beg\u00E4rs. Om dina uppgifter st\u00E4mmer \u00F6verens med v\u00E5ra register kommer du snart att f\u00E5 en ny aktiveringsl\u00E4nk i din inkorg.
 
 oie.activation.request.email.title.expire = Aktiveringsl\u00E4nken har utg\u00E5tt.
